chore: Update translations

--- a/frappe/translations/af.csv
+++ b/frappe/translations/af.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Boodskap (HTML),
 Send Attachments,Stuur aanhangsels,
 Testing,Toets,
 System Notification,Stelselkennisgewing,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio-nommer,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Initialiseer <a href=""#Form/Twilio Settings"">Twilio-instellings</a> om WhatsApp for Business te gebruik.",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Voeg &#39;n <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a> by om Slack Channel te gebruik.",
 Send System Notification,Stuur stelselkennisgewing,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","As dit geaktiveer is, verskyn die kennisgewing in die vervolgkeuselys vir kennisgewings regs bo in die navigasiebalk.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Kon nie {0} outomatiese e-posverslag stuur 
 Test email sent to {0},Toets-e-pos gestuur aan {0},
 Email queued to {0} recipients,E-pos is in die ry aan {0} ontvangers,
 Newsletter should have at least one recipient,Die nuusbrief moet ten minste een ontvanger hê,
-Please enable Twilio settings to send WhatsApp messages,Skakel Twilio-instellings in om WhatsApp-boodskappe te stuur,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Nie toegelaat om {0} dokument aan te heg nie, aktiveer asseblief Laat druk toe vir {0} in Drukinstellings",
 Signup Disabled,Aanmelding gedeaktiveer,
 Signups have been disabled for this website.,Aanmeldings is vir hierdie webwerf uitgeskakel.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Verifiëring van Razorpay-handtekening he
 Google Drive - Could not locate - {0},Google Drive - kon nie opspoor nie - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Sinkroniseringstoken was ongeldig en is teruggestel. Probeer weer sinkroniseer.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Kies &#39;n ander betaalmetode. Paytm ondersteun nie transaksies in die geldeenheid &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,Ongeldige SID of Auth-token vir rekening.,
-Please enable twilio settings before sending WhatsApp messages,Skakel twilio-instellings in voordat u WhatsApp-boodskappe stuur,
-Delivery Failed,Aflewering het misluk,
-Twilio WhatsApp Message Error,Twilio WhatsApp-boodskapfout,
 A featured post must have a cover image,&#39;N Voorgestelde pos moet &#39;n omslagprent hê,
 Load More,Laai meer,
 Published on,Gepubliseer op,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Stel eer
 Shared with the following Users with Read access:{0},Gedeel met die volgende gebruikers met leestoegang: {0},
 Already in the following Users ToDo list:{0},Reeds in die volgende lys ToDo-gebruikers: {0},
 Your assignment on {0} {1} has been removed by {2},Jou opdrag op {0} {1} is verwyder deur {2},
+Consumer,Verbruiker,
 Invalid Credentials,Ongeldige magtigingsbewyse,
 Print UOM after Quantity,Druk UOM na hoeveelheid uit,
 Uncaught Server Exception,Onvangste bedieneruitsondering,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Waarde kan nie negatief wees vir {0}: {1},
 Negative Value,Negatiewe waarde,
 Authentication failed while receiving emails from Email Account: {0}.,Stawing het misluk tydens die ontvangs van e-posse vanaf die e-posrekening: {0}.,
 Message from server: {0},Boodskap vanaf bediener: {0},
+Consumers,Verbruikers,
+Event Update Log Consumer,Verbruiker van gebeurtenisopdateringslogboek,
+Row #{0}: Could not find field {1} in {2} DocType,Ry # {0}: Kon nie veld {1} in {2} DocType vind nie,
+Invalid Fieldname,Ongeldige veldnaam,
