--- a/frappe/translations/bs.csv
+++ b/frappe/translations/bs.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Poruka (HTML),
 Send Attachments,Pošaljite priloge,
 Testing,Testiranje,
 System Notification,Obavijest o sistemu,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio Number,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Da biste koristili WhatsApp za posao, inicijalizirajte <a href=""#Form/Twilio Settings"">Twilio Settings</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Da biste koristili Slack Channel, dodajte <a href=""#List/Slack%20Webhook%20URL/List"">URL Slack Webhook-a</a> .",
 Send System Notification,Pošaljite sistemsko obavještenje,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Ako je omogućeno, obavijest će se pojaviti u padajućem padajućem obavijesti u gornjem desnom kutu navigacijske trake.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Slanje {0} automatskog izvještaja e-pošto
 Test email sent to {0},Testna e-pošta poslana na {0},
 Email queued to {0} recipients,E-pošta je stavljena u red primalaca ({0}),
 Newsletter should have at least one recipient,Bilten bi trebao imati barem jednog primatelja,
-Please enable Twilio settings to send WhatsApp messages,Molimo omogućite Twilio postavke za slanje WhatsApp poruka,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Nije dozvoljeno priložiti {0} dokument, omogućite Dozvoli ispis za {0} u Postavkama ispisa",
 Signup Disabled,Prijava onemogućena,
 Signups have been disabled for this website.,Prijave za ovu web stranicu su onemogućene.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Nije uspjela provjera potpisa Razorpay-a,
 Google Drive - Could not locate - {0},Google pogon - Nije moguće pronaći - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Token za sinkronizaciju je nevažeći i resetiran je, pokušajte ponovo sinkronizirati.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Odaberite drugi način plaćanja. Paytm ne podržava transakcije u valuti &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,Nevažeći SID računa ili žeton za autorizaciju.,
-Please enable twilio settings before sending WhatsApp messages,Omogućite twilio postavke prije slanja WhatsApp poruka,
-Delivery Failed,Dostava nije uspjela,
-Twilio WhatsApp Message Error,Pogreška poruke Twilio WhatsApp,
 A featured post must have a cover image,Istaknuti post mora imati naslovnu sliku,
 Load More,Učitaj još,
 Published on,Objavljeno,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Molimo p
 Shared with the following Users with Read access:{0},Dijeljeno sa sljedećim korisnicima s pristupom za čitanje: {0},
 Already in the following Users ToDo list:{0},Već na sljedećoj listi obaveza korisnika: {0},
 Your assignment on {0} {1} has been removed by {2},Vaš zadatak na {0} {1} uklonio je korisnik {2},
+Consumer,Potrošač,
 Invalid Credentials,Nevažeće vjerodajnice,
 Print UOM after Quantity,Ispis UOM nakon količine,
 Uncaught Server Exception,Neuhvaćeni izuzetak servera,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Vrijednost ne može biti negativna za {0}:
 Negative Value,Negativna vrijednost,
 Authentication failed while receiving emails from Email Account: {0}.,Autentifikacija nije uspjela tijekom primanja e-pošte s računa e-pošte: {0}.,
 Message from server: {0},Poruka od servera: {0},
+Consumers,Potrošači,
+Event Update Log Consumer,Potrošač dnevnika ažuriranja događaja,
+Row #{0}: Could not find field {1} in {2} DocType,Red # {0}: Nije moguće pronaći polje {1} u {2} DocType,
+Invalid Fieldname,Nevažeće ime polja,
