--- a/frappe/translations/ca.csv
+++ b/frappe/translations/ca.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Missatge (HTML),
 Send Attachments,Envia fitxers adjunts,
 Testing,Proves,
 System Notification,Notificació del sistema,
-WhatsApp,Què tal,
 Twilio Number,Número Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Per utilitzar WhatsApp per a empreses, inicialitzeu la <a href=""#Form/Twilio Settings"">configuració de Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Per utilitzar Slack Channel, afegiu un <a href=""#List/Slack%20Webhook%20URL/List"">URL de Slack Webhook</a> .",
 Send System Notification,Envia la notificació del sistema,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Si està activat, la notificació apareixerà al menú desplegable de notificacions a l&#39;extrem superior dret de la barra de navegació.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,No s&#39;ha pogut enviar {0} l&#39;informe 
 Test email sent to {0},Correu electrònic de prova enviat a {0},
 Email queued to {0} recipients,El correu electrònic està a la cua dels destinataris de {0},
 Newsletter should have at least one recipient,El butlletí ha de tenir com a mínim un destinatari,
-Please enable Twilio settings to send WhatsApp messages,Activeu la configuració de Twilio per enviar missatges de WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","No es permet adjuntar el document {0}, activeu Permet la impressió per a {0} a Configuració d&#39;impressió",
 Signup Disabled,S&#39;ha desactivat la inscripció,
 Signups have been disabled for this website.,S&#39;han desactivat els registres per a aquest lloc web.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,No s&#39;ha pogut verificar la signatura 
 Google Drive - Could not locate - {0},Google Drive: no s&#39;ha pogut localitzar - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",El testimoni de sincronització no és vàlid i s&#39;ha restablert. Torna-ho a provar de sincronitzar.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Seleccioneu una altra forma de pagament. Paytm no admet transaccions en moneda &quot;{0}&quot;,
-Invalid Account SID or Auth Token.,SID del compte o testimoni d&#39;autenticació no vàlid.,
-Please enable twilio settings before sending WhatsApp messages,Activeu la configuració de twilio abans d’enviar missatges de WhatsApp,
-Delivery Failed,No s&#39;ha pogut lliurar,
-Twilio WhatsApp Message Error,Error de missatge de Twilio WhatsApp,
 A featured post must have a cover image,Una publicació destacada ha de tenir una imatge de portada,
 Load More,Carrega més,
 Published on,Publicat el,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Definiu 
 Shared with the following Users with Read access:{0},Compartit amb els usuaris següents amb accés de lectura: {0},
 Already in the following Users ToDo list:{0},Ja apareix a la llista de tasques pendents d&#39;usuari següents: {0},
 Your assignment on {0} {1} has been removed by {2},{2} ha eliminat la vostra tasca a {0} {1},
+Consumer,Consumidor,
 Invalid Credentials,Credencials no vàlides,
 Print UOM after Quantity,Imprimiu UOM després de Quantity,
 Uncaught Server Exception,Excepció del servidor sense capturar,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},El valor no pot ser negatiu per a {0}: {1}
 Negative Value,Valor negatiu,
 Authentication failed while receiving emails from Email Account: {0}.,L&#39;autenticació ha fallat en rebre correus electrònics del compte de correu electrònic: {0}.,
 Message from server: {0},Missatge del servidor: {0},
+Consumers,Consumidors,
+Event Update Log Consumer,Consumidor de registre d’actualitzacions d’esdeveniments,
+Row #{0}: Could not find field {1} in {2} DocType,Fila núm. {0}: no s&#39;ha pogut trobar el camp {1} a {2} DocType,
+Invalid Fieldname,Nom de camp no vàlid,
