--- a/frappe/translations/cs.csv
+++ b/frappe/translations/cs.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Zpráva (HTML),
 Send Attachments,Odeslat přílohy,
 Testing,Testování,
 System Notification,Oznámení systému,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio číslo,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Chcete-li použít WhatsApp pro firmy, inicializujte <a href=""#Form/Twilio Settings"">nastavení Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Chcete-li použít Slack Channel, přidejte <a href=""#List/Slack%20Webhook%20URL/List"">URL Slack Webhook</a> .",
 Send System Notification,Odeslat oznámení systému,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Pokud je povoleno, oznámení se zobrazí v rozevíracím seznamu oznámení v pravém horním rohu navigační lišty.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Nepodařilo se odeslat {0} automatický e-m
 Test email sent to {0},Testovací e-mail odeslán na adresu {0},
 Email queued to {0} recipients,E-mail zařazen do fronty příjemcům {0},
 Newsletter should have at least one recipient,Newsletter by měl mít alespoň jednoho příjemce,
-Please enable Twilio settings to send WhatsApp messages,"Chcete-li odesílat zprávy WhatsApp, povolte nastavení Twilio",
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Není povoleno přiložit dokument {0}, povolte v nastavení tisku možnost Povolit tisk pro {0}",
 Signup Disabled,Registrace zakázána,
 Signups have been disabled for this website.,Na tomto webu byly zakázány registrace.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Ověření podpisu Razorpay se nezdařilo
 Google Drive - Could not locate - {0},Disk Google - nelze najít - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Token synchronizace byl neplatný a byl resetován, opakujte synchronizaci.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Vyberte prosím jinou platební metodu. Paytm nepodporuje transakce v měně „{0}“,
-Invalid Account SID or Auth Token.,Neplatný identifikátor SID účtu nebo ověřovací token.,
-Please enable twilio settings before sending WhatsApp messages,Před odesláním zpráv WhatsApp povolte nastavení twilio,
-Delivery Failed,Nebylo doručeno,
-Twilio WhatsApp Message Error,Chyba zprávy Twilio WhatsApp,
 A featured post must have a cover image,Doporučený příspěvek musí mít titulní obrázek,
 Load More,Načíst další,
 Published on,Publikováno dne,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Nejprve 
 Shared with the following Users with Read access:{0},Sdíleno s následujícími uživateli s přístupem pro čtení: {0},
 Already in the following Users ToDo list:{0},Již v následujícím seznamu úkolů uživatelů: {0},
 Your assignment on {0} {1} has been removed by {2},Váš úkol dne {0} {1} byl odstraněn uživatelem {2},
+Consumer,Spotřebitel,
 Invalid Credentials,Neplatná pověření,
 Print UOM after Quantity,Tisk MJ po množství,
 Uncaught Server Exception,Nezachycená výjimka serveru,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Hodnota nemůže být záporná pro {0}: {
 Negative Value,Záporná hodnota,
 Authentication failed while receiving emails from Email Account: {0}.,Při přijímání e-mailů z e-mailového účtu se nezdařilo ověření: {0}.,
 Message from server: {0},Zpráva ze serveru: {0},
+Consumers,Spotřebitelé,
+Event Update Log Consumer,Zákazník aktualizace událostí,
+Row #{0}: Could not find field {1} in {2} DocType,Řádek č. {0}: Nelze najít pole {1} v dokumentu {2} DocType,
+Invalid Fieldname,Neplatný název pole,
