--- a/frappe/translations/da.csv
+++ b/frappe/translations/da.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Besked (HTML),
 Send Attachments,Send vedhæftede filer,
 Testing,Testning,
 System Notification,Systemmeddelelse,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio-nummer,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","For at bruge WhatsApp for Business skal du initialisere <a href=""#Form/Twilio Settings"">Twilio-indstillinger</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","For at bruge Slack Channel skal du tilføje en <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a> .",
 Send System Notification,Send systemmeddelelse,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Hvis aktiveret, vises meddelelsen i rullemenuen underretninger i øverste højre hjørne af navigationslinjen.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Kunne ikke sende {0} rapport med automatisk
 Test email sent to {0},Test-mail sendt til {0},
 Email queued to {0} recipients,E-mail i kø til {0} modtagere,
 Newsletter should have at least one recipient,Nyhedsbrevet skal have mindst en modtager,
-Please enable Twilio settings to send WhatsApp messages,Aktivér Twilio-indstillingerne for at sende WhatsApp-meddelelser,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Det er ikke tilladt at vedhæfte {0} dokument, skal du aktivere Tillad udskrivning til {0} i udskriftsindstillinger",
 Signup Disabled,Tilmelding deaktiveret,
 Signups have been disabled for this website.,Tilmeldinger er deaktiveret på dette websted.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Bekræftelse af Razorpay-signatur mislykk
 Google Drive - Could not locate - {0},Google Drev - Kunne ikke finde - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Synkroniseringstoken var ugyldigt og er blevet nulstillet. Prøv at synkronisere igen.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Vælg en anden betalingsmetode. Paytm understøtter ikke transaktioner i valutaen &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,Ugyldig SID-konto eller godkendelsestoken.,
-Please enable twilio settings before sending WhatsApp messages,"Aktiver twilio-indstillinger, inden du sender WhatsApp-beskeder",
-Delivery Failed,Levering mislykkedes,
-Twilio WhatsApp Message Error,Twilio WhatsApp-meddelelsesfejl,
 A featured post must have a cover image,Et udvalgt indlæg skal have et forsidebillede,
 Load More,Indlæs mere,
 Published on,Udgivet den,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Indstil 
 Shared with the following Users with Read access:{0},Delt med følgende brugere med læseadgang: {0},
 Already in the following Users ToDo list:{0},Allerede på følgende brugere ToDo-liste: {0},
 Your assignment on {0} {1} has been removed by {2},Din opgave på {0} {1} er blevet fjernet af {2},
+Consumer,Forbruger,
 Invalid Credentials,Ugyldige legitimationsoplysninger,
 Print UOM after Quantity,Udskriv UOM efter antal,
 Uncaught Server Exception,Ufanget serverundtagelse,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Værdien kan ikke være negativ for {0}: {
 Negative Value,Negativ værdi,
 Authentication failed while receiving emails from Email Account: {0}.,Godkendelse mislykkedes under modtagelse af e-mails fra e-mail-konto: {0}.,
 Message from server: {0},Meddelelse fra server: {0},
+Consumers,Forbrugere,
+Event Update Log Consumer,Forbruger af hændelsesopdateringslog,
+Row #{0}: Could not find field {1} in {2} DocType,Række nr. {0}: Kunne ikke finde felt {1} i {2} DocType,
+Invalid Fieldname,Ugyldigt feltnavn,
