--- a/frappe/translations/de.csv
+++ b/frappe/translations/de.csv
@@ -1610,7 +1610,7 @@ New Email,Neue E-Mail,
 New Email Account,Neues E-Mail-Konto,
 New Event,Neues Event,
 New Folder,Neuer Ordner,
-New Kanban Board,New Kanbantafel,
+New Kanban Board,Neues Kanban-Board,
 New Message from Website Contact Page,Neue Nachricht von der Webseite Kontaktseite,
 New Name,Neuer Name,
 New Newsletter,Neuer Newsletter,
@@ -4400,9 +4400,7 @@ Message (HTML),Nachricht (HTML),
 Send Attachments,Anhänge senden,
 Testing,Testen,
 System Notification,Systembenachrichtigung,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio Nummer,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Initialisieren Sie die <a href=""#Form/Twilio Settings"">Twilio-Einstellungen,</a> um WhatsApp for Business zu verwenden.",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Um Slack Channel zu verwenden, fügen Sie eine <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook-URL hinzu</a> .",
 Send System Notification,Systembenachrichtigung senden,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Wenn diese Option aktiviert ist, wird die Benachrichtigung in der Dropdown-Liste Benachrichtigungen in der oberen rechten Ecke der Navigationsleiste angezeigt.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,{0} Auto-E-Mail-Bericht konnte nicht gesend
 Test email sent to {0},Test-E-Mail an {0} gesendet,
 Email queued to {0} recipients,E-Mail an {0} Empfänger in der Warteschlange,
 Newsletter should have at least one recipient,Der Newsletter sollte mindestens einen Empfänger haben,
-Please enable Twilio settings to send WhatsApp messages,"Bitte aktivieren Sie die Twilio-Einstellungen, um WhatsApp-Nachrichten zu senden",
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings",Das {0} -Dokument darf nicht angehängt werden. Aktivieren Sie in den Druckeinstellungen die Option &quot;Druck für {0} zulassen&quot;,
 Signup Disabled,Anmeldung deaktiviert,
 Signups have been disabled for this website.,Anmeldungen für diese Website wurden deaktiviert.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Überprüfung der Razorpay-Signatur fehlg
 Google Drive - Could not locate - {0},Google Drive - Konnte nicht finden - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Das Synchronisierungstoken war ungültig und wurde zurückgesetzt. Wiederholen Sie die Synchronisierung.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Bitte wählen Sie eine andere Zahlungsmethode. Paytm unterstützt keine Transaktionen in der Währung &#39;{0}&#39;.,
-Invalid Account SID or Auth Token.,Ungültige Konto-SID oder Auth-Token.,
-Please enable twilio settings before sending WhatsApp messages,"Bitte aktivieren Sie die Twilio-Einstellungen, bevor Sie WhatsApp-Nachrichten senden",
-Delivery Failed,Zustellung fehlgeschlagen,
-Twilio WhatsApp Message Error,Twilio WhatsApp-Nachrichtenfehler,
 A featured post must have a cover image,Ein vorgestellter Beitrag muss ein Titelbild haben,
 Load More,Mehr laden,
 Published on,Veröffentlicht auf,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Bitte le
 Shared with the following Users with Read access:{0},Wird für die folgenden Benutzer mit Lesezugriff freigegeben: {0},
 Already in the following Users ToDo list:{0},Bereits in der folgenden Benutzer-ToDo-Liste: {0},
 Your assignment on {0} {1} has been removed by {2},Ihre Zuordnung zu {0} {1} wurde von {2} entfernt,
+Consumer,Verbraucher,
 Invalid Credentials,Ungültige Anmeldeinformationen,
 Print UOM after Quantity,UOM nach Menge drucken,
 Uncaught Server Exception,Nicht erfasste Serverausnahme,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Der Wert kann für {0} nicht negativ sein:
 Negative Value,Negativer Wert,
 Authentication failed while receiving emails from Email Account: {0}.,Die Authentifizierung ist beim Empfang von E-Mails vom E-Mail-Konto fehlgeschlagen: {0}.,
 Message from server: {0},Nachricht vom Server: {0},
+Consumers,Verbraucher,
+Event Update Log Consumer,Ereignisaktualisierungsprotokoll Consumer,
+Row #{0}: Could not find field {1} in {2} DocType,Zeile # {0}: Feld {1} in {2} DocType konnte nicht gefunden werden,
+Invalid Fieldname,Ungültiger Feldname,
