--- a/frappe/translations/es.csv
+++ b/frappe/translations/es.csv
@@ -3905,7 +3905,7 @@ Sign up,Regístrate,
 Time format,Formato de tiempo,
 Upload failed,Subida Falló,
 User Id,ID de usuario,
-Yes,si,
+Yes,Sí,
 Your email address,Tu correo electrónico,
 added,adicional,
 added {0},Añadido {0},
@@ -4400,9 +4400,7 @@ Message (HTML),Mensaje (HTML),
 Send Attachments,Enviar archivos adjuntos,
 Testing,Pruebas,
 System Notification,Notificación del sistema,
-WhatsApp,WhatsApp,
 Twilio Number,Número de Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Para usar WhatsApp for Business, inicialice la <a href=""#Form/Twilio Settings"">configuración de Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Para usar Slack Channel, agregue una <a href=""#List/Slack%20Webhook%20URL/List"">URL de Webhook de Slack</a> .",
 Send System Notification,Enviar notificación del sistema,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Si está habilitado, la notificación se mostrará en el menú desplegable de notificaciones en la esquina superior derecha de la barra de navegación.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,No se pudo enviar el {0} informe automátic
 Test email sent to {0},Correo electrónico de prueba enviado a {0},
 Email queued to {0} recipients,Correo electrónico en cola para {0} destinatarios,
 Newsletter should have at least one recipient,El boletín debe tener al menos un destinatario,
-Please enable Twilio settings to send WhatsApp messages,Habilite la configuración de Twilio para enviar mensajes de WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","No se permite adjuntar {0} documento, habilite Permitir impresión para {0} en Configuración de impresión.",
 Signup Disabled,Registro deshabilitado,
 Signups have been disabled for this website.,Se han desactivado las suscripciones para este sitio web.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Error en la verificación de la firma de 
 Google Drive - Could not locate - {0},Google Drive: no se pudo localizar: {0},
 "Sync token was invalid and has been resetted, Retry syncing.",El token de sincronización no es válido y se ha restablecido. Vuelva a intentar la sincronización.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Seleccione otro método de pago. Paytm no admite transacciones en la moneda &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,SID de cuenta o token de autenticación no válido.,
-Please enable twilio settings before sending WhatsApp messages,Habilite la configuración de twilio antes de enviar mensajes de WhatsApp,
-Delivery Failed,Entrega fallida,
-Twilio WhatsApp Message Error,Error de mensaje de WhatsApp de Twilio,
 A featured post must have a cover image,Una publicación destacada debe tener una imagen de portada,
 Load More,Carga más,
 Published on,Publicado en,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Primero 
 Shared with the following Users with Read access:{0},Compartido con los siguientes usuarios con acceso de lectura: {0},
 Already in the following Users ToDo list:{0},Ya en la siguiente lista de tareas pendientes de los usuarios: {0},
 Your assignment on {0} {1} has been removed by {2},Tu tarea de {0} {1} ha sido eliminada por {2},
+Consumer,Consumidor,
 Invalid Credentials,Credenciales no válidas,
 Print UOM after Quantity,Imprimir UOM después de Cantidad,
 Uncaught Server Exception,Excepción de servidor no detectada,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},El valor no puede ser negativo para {0}: {
 Negative Value,Valor negativo,
 Authentication failed while receiving emails from Email Account: {0}.,Error de autenticación al recibir correos electrónicos de la cuenta de correo electrónico: {0}.,
 Message from server: {0},Mensaje del servidor: {0},
+Consumers,Consumidores,
+Event Update Log Consumer,Consumidor de registro de actualización de eventos,
+Row #{0}: Could not find field {1} in {2} DocType,Fila # {0}: no se pudo encontrar el campo {1} en {2} DocType,
+Invalid Fieldname,Nombre de campo no válido,
