--- a/frappe/translations/et.csv
+++ b/frappe/translations/et.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Sõnum (HTML),
 Send Attachments,Saada manused,
 Testing,Testimine,
 System Notification,Süsteemi teatamine,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio number,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","WhatsAppi for Business kasutamiseks lähtestage <a href=""#Form/Twilio Settings"">Twilio seaded</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Slack Channel&#39;i kasutamiseks lisage <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a> .",
 Send System Notification,Saada süsteemiteatis,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Kui see on lubatud, kuvatakse teade navigeerimisriba paremas ülanurgas rippmenüüs Märguanded.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,{0} Automaatse meiliaruande saatmine ebaõn
 Test email sent to {0},Testimeil saadeti aadressile {0},
 Email queued to {0} recipients,E-post järjekorras {0} saajale,
 Newsletter should have at least one recipient,Infolehel peaks olema vähemalt üks adressaat,
-Please enable Twilio settings to send WhatsApp messages,WhatsAppi sõnumite saatmiseks lubage Twilio seaded,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings",Dokumendi {0} lisamine ei ole lubatud. Lubage prindiseadetes lubamine Luba printimine {0},
 Signup Disabled,Registreerimine on keelatud,
 Signups have been disabled for this website.,Sellel veebisaidil on registreerumine keelatud.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Razorpay allkirja kinnitamine nurjus,
 Google Drive - Could not locate - {0},Google Drive - ei õnnestunud leida - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Sünkroonimisluba oli vale ja see on lähtestatud. Proovige sünkroonimist uuesti.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Valige mõni muu makseviis. Paytm ei toeta tehinguid valuutas „{0}”,
-Invalid Account SID or Auth Token.,Vale konto SID või Auth Token.,
-Please enable twilio settings before sending WhatsApp messages,Enne WhatsAppi sõnumite saatmist lubage twilio seaded,
-Delivery Failed,Edastus ebaõnnestus,
-Twilio WhatsApp Message Error,Twilio WhatsAppi sõnumi viga,
 A featured post must have a cover image,Esiletõstetud postitusel peab olema kaanepilt,
 Load More,Lae rohkem,
 Published on,Avaldatud,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Kõigepe
 Shared with the following Users with Read access:{0},Jagatud järgmiste lugemisõigusega kasutajatega: {0},
 Already in the following Users ToDo list:{0},Juba järgmises kasutajate ülesannete loendis: {0},
 Your assignment on {0} {1} has been removed by {2},{2} eemaldas teie ülesande saidil {0} {1},
+Consumer,Tarbija,
 Invalid Credentials,Kehtetu mandaat,
 Print UOM after Quantity,Prindi UOM pärast kogust,
 Uncaught Server Exception,Püüdmatu serveri erand,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Väärtus {0} ei saa olla negatiivne: {1},
 Negative Value,Negatiivne väärtus,
 Authentication failed while receiving emails from Email Account: {0}.,E-posti kontolt meilide saamisel nurjus autentimine: {0}.,
 Message from server: {0},Sõnum serverilt: {0},
+Consumers,Tarbijad,
+Event Update Log Consumer,Sündmuse värskendamise logi tarbija,
+Row #{0}: Could not find field {1} in {2} DocType,Rida nr {0}: välja {1} ei leitud rakendusest {2} DocType,
+Invalid Fieldname,Vale välja nimi,
