--- a/frappe/translations/fa.csv
+++ b/frappe/translations/fa.csv
@@ -4400,9 +4400,7 @@ Message (HTML),پیام (HTML),
 Send Attachments,ارسال پیوست ها,
 Testing,آزمایش کردن,
 System Notification,اعلان سیستم,
-WhatsApp,واتس اپ,
 Twilio Number,شماره Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","برای استفاده از WhatsApp برای تجارت ، <a href=""#Form/Twilio Settings"">تنظیمات Twilio را</a> اولیه <a href=""#Form/Twilio Settings"">کنید</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","برای استفاده از Slack Channel ، یک <a href=""#List/Slack%20Webhook%20URL/List"">URL Slack Webhook</a> اضافه <a href=""#List/Slack%20Webhook%20URL/List"">کنید</a> .",
 Send System Notification,اعلان سیستم را ارسال کنید,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.",در صورت فعال بودن ، اعلان در منوی کشویی اعلان ها در گوشه سمت راست بالای نوار پیمایش نشان داده می شود.,
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,{0} گزارش خودکار ایمیل ار
 Test email sent to {0},ایمیل آزمایشی به {0} ارسال شد,
 Email queued to {0} recipients,ارسال ایمیل به {0} گیرنده,
 Newsletter should have at least one recipient,خبرنامه باید حداقل یک گیرنده داشته باشد,
-Please enable Twilio settings to send WhatsApp messages,لطفاً تنظیمات Twilio را برای ارسال پیام های WhatsApp فعال کنید,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings",پیوست کردن {0} سند مجاز نیست ، لطفاً اجازه تنظیم برای چاپ را برای {0} در تنظیمات چاپ فعال کنید,
 Signup Disabled,ثبت نام غیرفعال است,
 Signups have been disabled for this website.,ثبت نام برای این وب سایت غیرفعال شده است.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,تأیید تأیید Razorpay انجام
 Google Drive - Could not locate - {0},Google Drive - مکان یافت نشد - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",رمز همگام سازی نامعتبر است و مجدداً بازنشانی شده است ، دوباره همگام سازی را امتحان کنید.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',لطفاً روش پرداخت دیگری را انتخاب کنید. Paytm از معاملات با ارز &quot;{0}&quot; پشتیبانی نمی کند,
-Invalid Account SID or Auth Token.,SID یا Auth Token حساب نامعتبر است.,
-Please enable twilio settings before sending WhatsApp messages,لطفاً قبل از ارسال پیام های WhatsApp ، تنظیمات twilio را فعال کنید,
-Delivery Failed,تحویل ناموفق بود,
-Twilio WhatsApp Message Error,خطای پیام Twilio WhatsApp,
 A featured post must have a cover image,یک پست ویژه باید دارای یک تصویر جلد باشد,
 Load More,بارگذاری بیشتر,
 Published on,منتشر شده در,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,لطفا
 Shared with the following Users with Read access:{0},با کاربران زیر با دسترسی خواندن به اشتراک گذاشته شده است: {0},
 Already in the following Users ToDo list:{0},قبلاً در لیست ToDo کاربران زیر بوده است: {0},
 Your assignment on {0} {1} has been removed by {2},تکلیف شما در {0} {1} توسط {2} حذف شده است,
+Consumer,مصرف کننده,
 Invalid Credentials,گواهی نامه نامعتبر,
 Print UOM after Quantity,UOM را بعد از Quantity چاپ کنید,
 Uncaught Server Exception,استثنای سرور گیر نیافته,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},مقدار برای {0} نمی تواند 
 Negative Value,ارزش منفی,
 Authentication failed while receiving emails from Email Account: {0}.,تأیید اعتبار هنگام دریافت ایمیل از حساب ایمیل انجام نشد: {0}.,
 Message from server: {0},پیام از طرف سرور: {0},
+Consumers,مصرف کنندگان,
+Event Update Log Consumer,مصرف کننده گزارش بروزرسانی رویداد,
+Row #{0}: Could not find field {1} in {2} DocType,ردیف شماره {0}: قسمت {1} در {2} DocType پیدا نشد,
+Invalid Fieldname,نام فیلد نامعتبر است,
