--- a/frappe/translations/fi.csv
+++ b/frappe/translations/fi.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Viesti (HTML),
 Send Attachments,Lähetä liitteet,
 Testing,Testaus,
 System Notification,Järjestelmäilmoitus,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio-numero,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Käynnistä WhatsApp for Business alustamalla <a href=""#Form/Twilio Settings"">Twilio-asetukset</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Jos haluat käyttää Slack Channel -ohjelmaa, lisää <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL-osoite</a> .",
 Send System Notification,Lähetä järjestelmäilmoitus,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Jos tämä on käytössä, ilmoitus näkyy avattavassa ilmoitusten valikossa navigointipalkin oikeassa yläkulmassa.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,{0} Automaattisen sähköpostiraportin läh
 Test email sent to {0},Testiviesti lähetetty osoitteeseen {0},
 Email queued to {0} recipients,Sähköposti jonossa {0} vastaanottajalle,
 Newsletter should have at least one recipient,Uutiskirjeessä tulisi olla vähintään yksi vastaanottaja,
-Please enable Twilio settings to send WhatsApp messages,"Ota Twilio-asetukset käyttöön, jotta voit lähettää WhatsApp-viestejä",
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings",Ei sallita {0} -asiakirjan liittämistä. Ota Salli tulostus käyttöön {0} -asetukseksi Tulostusasetuksissa,
 Signup Disabled,Rekisteröityminen pois käytöstä,
 Signups have been disabled for this website.,Rekisteröityminen on poistettu käytöstä tältä verkkosivustolta.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Razorpay-allekirjoituksen vahvistus epäo
 Google Drive - Could not locate - {0},Google Drive - ei löytynyt - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Synkronointitunnus oli virheellinen ja se on nollattu. Yritä synkronoida uudelleen.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Valitse toinen maksutapa. Paytm ei tue valuutan {0} tapahtumia,
-Invalid Account SID or Auth Token.,Virheellinen tilin SID tai todennustunnus.,
-Please enable twilio settings before sending WhatsApp messages,Ota twilio-asetukset käyttöön ennen WhatsApp-viestien lähettämistä,
-Delivery Failed,Toimitus epäonnistui,
-Twilio WhatsApp Message Error,Twilio WhatsApp -viestin virhe,
 A featured post must have a cover image,Esitetyssä viestissä on oltava kansikuva,
 Load More,Lataa lisää,
 Published on,Julkaistu,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Aseta en
 Shared with the following Users with Read access:{0},"Jaettu seuraaville käyttäjille, joilla on lukuoikeus: {0}",
 Already in the following Users ToDo list:{0},Jo seuraavassa Käyttäjien tehtäväluettelossa: {0},
 Your assignment on {0} {1} has been removed by {2},{2} on poistanut tehtävän {0} {1},
+Consumer,Kuluttaja,
 Invalid Credentials,Virheelliset kirjautumistiedot,
 Print UOM after Quantity,Tulosta UOM määrän jälkeen,
 Uncaught Server Exception,Sieppaamaton palvelinpoikkeus,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Arvo ei voi olla negatiivinen kohteelle {0
 Negative Value,Negatiivinen arvo,
 Authentication failed while receiving emails from Email Account: {0}.,Todennus epäonnistui vastaanotettaessa sähköposteja sähköpostitililtä: {0}.,
 Message from server: {0},Viesti palvelimelta: {0},
+Consumers,Kuluttajat,
+Event Update Log Consumer,Tapahtuman päivityslokin kuluttaja,
+Row #{0}: Could not find field {1} in {2} DocType,Rivi # {0}: {2} DocType-kentästä ei löytynyt kenttää {1},
+Invalid Fieldname,Virheellinen kentän nimi,
