--- a/frappe/translations/fr.csv
+++ b/frappe/translations/fr.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Message (HTML),
 Send Attachments,Envoyer des pièces jointes,
 Testing,Essai,
 System Notification,Notification système,
-WhatsApp,WhatsApp,
 Twilio Number,Numéro Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Pour utiliser WhatsApp for Business, initialisez les <a href=""#Form/Twilio Settings"">paramètres Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Pour utiliser Slack Channel, ajoutez une <a href=""#List/Slack%20Webhook%20URL/List"">URL Slack Webhook</a> .",
 Send System Notification,Envoyer une notification système,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Si elle est activée, la notification apparaîtra dans la liste déroulante des notifications dans le coin supérieur droit de la barre de navigation.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Échec de l&#39;envoi du {0} rapport automa
 Test email sent to {0},E-mail de test envoyé à {0},
 Email queued to {0} recipients,E-mail mis en file d&#39;attente pour {0} destinataires,
 Newsletter should have at least one recipient,La newsletter doit avoir au moins un destinataire,
-Please enable Twilio settings to send WhatsApp messages,Veuillez activer les paramètres Twilio pour envoyer des messages WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Vous n&#39;êtes pas autorisé à joindre un document {0}, veuillez activer Autoriser l&#39;impression pour {0} dans les paramètres d&#39;impression",
 Signup Disabled,Inscription désactivée,
 Signups have been disabled for this website.,Les inscriptions ont été désactivées pour ce site Web.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Échec de la vérification de la signatur
 Google Drive - Could not locate - {0},Google Drive - Impossible de localiser - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Le jeton de synchronisation n&#39;était pas valide et a été réinitialisé. Réessayez la synchronisation.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Veuillez sélectionner un autre mode de paiement. Paytm ne prend pas en charge les transactions dans la devise &quot;{0}&quot;,
-Invalid Account SID or Auth Token.,SID de compte ou jeton d&#39;authentification non valide.,
-Please enable twilio settings before sending WhatsApp messages,Veuillez activer les paramètres twilio avant d&#39;envoyer des messages WhatsApp,
-Delivery Failed,La livraison a échoué,
-Twilio WhatsApp Message Error,Erreur de message Twilio WhatsApp,
 A featured post must have a cover image,Un article en vedette doit avoir une image de couverture,
 Load More,Charger plus,
 Published on,Publié le,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Veuillez
 Shared with the following Users with Read access:{0},Partagé avec les utilisateurs suivants avec accès en lecture: {0},
 Already in the following Users ToDo list:{0},Déjà dans la liste des tâches des utilisateurs suivante: {0},
 Your assignment on {0} {1} has been removed by {2},Votre devoir sur {0} {1} a été supprimé par {2},
+Consumer,Consommateur,
 Invalid Credentials,Les informations d&#39;identification invalides,
 Print UOM after Quantity,Imprimer UdM après la quantité,
 Uncaught Server Exception,Exception de serveur non interceptée,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},La valeur ne peut pas être négative pour
 Negative Value,Valeur négative,
 Authentication failed while receiving emails from Email Account: {0}.,L&#39;authentification a échoué lors de la réception des e-mails du compte de messagerie: {0}.,
 Message from server: {0},Message du serveur: {0},
+Consumers,Les consommateurs,
+Event Update Log Consumer,Consommateur du journal de mise à jour des événements,
+Row #{0}: Could not find field {1} in {2} DocType,Ligne n ° {0}: impossible de trouver le champ {1} dans {2} DocType,
+Invalid Fieldname,Nom de champ non valide,
