--- a/frappe/translations/id.csv
+++ b/frappe/translations/id.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Pesan (HTML),
 Send Attachments,Kirim Lampiran,
 Testing,Menguji,
 System Notification,Pemberitahuan Sistem,
-WhatsApp,Ada apa,
 Twilio Number,Nomor Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Untuk menggunakan WhatsApp for Business, lakukan inisialisasi <a href=""#Form/Twilio Settings"">Pengaturan Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Untuk menggunakan Slack Channel, tambahkan <a href=""#List/Slack%20Webhook%20URL/List"">URL Webhook Slack</a> .",
 Send System Notification,Kirim Pemberitahuan Sistem,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Jika diaktifkan, notifikasi akan muncul di drop-down notifikasi di sudut kanan atas bilah navigasi.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Gagal mengirim {0} Laporan Email Otomatis,
 Test email sent to {0},Email percobaan dikirim ke {0},
 Email queued to {0} recipients,Email diantrekan ke {0} penerima,
 Newsletter should have at least one recipient,Buletin harus memiliki setidaknya satu penerima,
-Please enable Twilio settings to send WhatsApp messages,Harap aktifkan pengaturan Twilio untuk mengirim pesan WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Tidak diizinkan melampirkan dokumen {0}, harap aktifkan Izinkan Pencetakan Untuk {0} di Setelan Cetak",
 Signup Disabled,Pendaftaran Dinonaktifkan,
 Signups have been disabled for this website.,Pendaftaran telah dinonaktifkan untuk situs web ini.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Verifikasi Tanda Tangan Razorpay Gagal,
 Google Drive - Could not locate - {0},Google Drive - Tidak dapat menemukan - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Token sinkronisasi tidak valid dan telah disetel ulang, Coba sinkronkan lagi.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Pilih metode pembayaran lain. Paytm tidak mendukung transaksi dalam mata uang &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,SID Akun atau Token Auth tidak valid.,
-Please enable twilio settings before sending WhatsApp messages,Harap aktifkan pengaturan twilio sebelum mengirim pesan WhatsApp,
-Delivery Failed,Pengiriman gagal,
-Twilio WhatsApp Message Error,Kesalahan Pesan Twilio WhatsApp,
 A featured post must have a cover image,Postingan unggulan harus memiliki gambar sampul,
 Load More,Muat lebih banyak,
 Published on,Diterbitkan di,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Harap te
 Shared with the following Users with Read access:{0},Dibagikan dengan Pengguna berikut dengan akses Baca: {0},
 Already in the following Users ToDo list:{0},Sudah ada di daftar ToDo Pengguna berikut: {0},
 Your assignment on {0} {1} has been removed by {2},Tugas Anda pada {0} {1} telah dihapus oleh {2},
+Consumer,Konsumen,
 Invalid Credentials,Kredensial tidak valid,
 Print UOM after Quantity,Cetak UOM setelah Kuantitas,
 Uncaught Server Exception,Pengecualian Server Tidak Tertangkap,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Nilai tidak boleh negatif untuk {0}: {1},
 Negative Value,Nilai Negatif,
 Authentication failed while receiving emails from Email Account: {0}.,Autentikasi gagal saat menerima email dari Akun Email: {0}.,
 Message from server: {0},Pesan dari server: {0},
+Consumers,Konsumen,
+Event Update Log Consumer,Event Update Log Consumer,
+Row #{0}: Could not find field {1} in {2} DocType,Baris # {0}: Tidak dapat menemukan bidang {1} di {2} DocType,
+Invalid Fieldname,Nama bidang tidak valid,
