--- a/frappe/translations/is.csv
+++ b/frappe/translations/is.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Skilaboð (HTML),
 Send Attachments,Sendu viðhengi,
 Testing,Prófun,
 System Notification,Kerfis tilkynning,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio númer,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Til að nota WhatsApp fyrir fyrirtæki skaltu frumstilla <a href=""#Form/Twilio Settings"">Twilio stillingar</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Til að nota Slack Channel skaltu bæta við <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a> .",
 Send System Notification,Senda kerfistilkynningu,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.",Ef það er virkt mun tilkynningin birtast í fellivalmyndinni í tilkynningum efst í hægra horni stýristikunnar.,
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Ekki tókst að senda {0} sjálfvirka tölv
 Test email sent to {0},Prófpóstur sendur til {0},
 Email queued to {0} recipients,Tölvupóstur í biðröð til {0} viðtakenda,
 Newsletter should have at least one recipient,Fréttabréf ætti að hafa að minnsta kosti einn viðtakanda,
-Please enable Twilio settings to send WhatsApp messages,Vinsamlegast virkjaðu Twilio stillingar til að senda WhatsApp skilaboð,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Ekki leyfilegt að hengja við {0} skjal, vinsamlegast virkjaðu Leyfa prentun fyrir {0} í prentstillingum",
 Signup Disabled,Skráning óvirk,
 Signups have been disabled for this website.,Slökkt hefur verið á skráningum vegna þessarar vefsíðu.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Staðfesting á undirskrift Razorpay mist
 Google Drive - Could not locate - {0},Google Drive - Gat ekki fundið - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Samstillingarmerki var ógilt og hefur verið endurstillt. Reyndu aftur að samstilla.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Veldu annan greiðslumáta. Paytm styður ekki viðskipti í gjaldmiðlinum „{0}“,
-Invalid Account SID or Auth Token.,Ógilt SID reiknings eða auðkenni auðkennis.,
-Please enable twilio settings before sending WhatsApp messages,Vinsamlegast virkjaðu twilio stillingar áður en þú sendir WhatsApp skilaboð,
-Delivery Failed,Afhending mistókst,
-Twilio WhatsApp Message Error,Twilio WhatsApp skilaboðavilla,
 A featured post must have a cover image,Valin færsla verður að hafa forsíðumynd,
 Load More,Hlaða meira,
 Published on,Birt þann,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Vinsamle
 Shared with the following Users with Read access:{0},Deilt með eftirfarandi notendum með lesaðgang: {0},
 Already in the following Users ToDo list:{0},Nú þegar á eftirfarandi ToDo lista fyrir notendur: {0},
 Your assignment on {0} {1} has been removed by {2},Verkefni þitt á {0} {1} var fjarlægt af {2},
+Consumer,Neytandi,
 Invalid Credentials,Ógild skilríki,
 Print UOM after Quantity,Prentaðu UOM eftir magni,
 Uncaught Server Exception,Óveiddur Server undantekning,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Gildi getur ekki verið neikvætt fyrir {0
 Negative Value,Neikvætt gildi,
 Authentication failed while receiving emails from Email Account: {0}.,Auðkenning mistókst þegar móttekin var tölvupóstur frá netreikningi: {0}.,
 Message from server: {0},Skilaboð frá netþjóni: {0},
+Consumers,Neytendur,
+Event Update Log Consumer,Viðburður uppfærsla Log Notandi,
+Row #{0}: Could not find field {1} in {2} DocType,Röð nr. {0}: Fann ekki reitinn {1} í {2} DocType,
+Invalid Fieldname,Ógilt reitanafn,
