--- a/frappe/translations/it.csv
+++ b/frappe/translations/it.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Messaggio (HTML),
 Send Attachments,Invia allegati,
 Testing,Test,
 System Notification,Notifica di sistema,
-WhatsApp,WhatsApp,
 Twilio Number,Numero Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Per utilizzare WhatsApp for Business, inizializza <a href=""#Form/Twilio Settings"">le Impostazioni di Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Per utilizzare Slack Channel, aggiungi un <a href=""#List/Slack%20Webhook%20URL/List"">URL Webhook Slack</a> .",
 Send System Notification,Invia notifica di sistema,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Se abilitato, la notifica verrà visualizzata nel menu a discesa delle notifiche nell&#39;angolo in alto a destra della barra di navigazione.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Impossibile inviare {0} rapporto email auto
 Test email sent to {0},Email di prova inviata a {0},
 Email queued to {0} recipients,Email accodate a {0} destinatari,
 Newsletter should have at least one recipient,La newsletter dovrebbe avere almeno un destinatario,
-Please enable Twilio settings to send WhatsApp messages,Abilita le impostazioni di Twilio per inviare messaggi WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Non è consentito allegare {0} documento, abilitare Consenti stampa per {0} nelle impostazioni di stampa",
 Signup Disabled,Registrazione disabilitata,
 Signups have been disabled for this website.,Le registrazioni sono state disabilitate per questo sito web.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Verifica della firma Razorpay non riuscit
 Google Drive - Could not locate - {0},Google Drive - Impossibile individuare - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Il token di sincronizzazione non era valido ed è stato ripristinato. Riprova la sincronizzazione.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Seleziona un altro metodo di pagamento. Paytm non supporta le transazioni nella valuta &quot;{0}&quot;,
-Invalid Account SID or Auth Token.,SID account o token di autenticazione non valido.,
-Please enable twilio settings before sending WhatsApp messages,Abilita le impostazioni di twilio prima di inviare messaggi WhatsApp,
-Delivery Failed,Consegna fallita,
-Twilio WhatsApp Message Error,Twilio WhatsApp Message Error,
 A featured post must have a cover image,Un post in primo piano deve avere un&#39;immagine di copertina,
 Load More,Carica altro,
 Published on,pubblicato su,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Impostar
 Shared with the following Users with Read access:{0},Condiviso con i seguenti utenti con accesso in lettura: {0},
 Already in the following Users ToDo list:{0},Già nel seguente elenco di attività da fare per gli utenti: {0},
 Your assignment on {0} {1} has been removed by {2},Il tuo compito su {0} {1} è stato rimosso da {2},
+Consumer,Consumatore,
 Invalid Credentials,Credenziali non valide,
 Print UOM after Quantity,Stampa UOM dopo la quantità,
 Uncaught Server Exception,Eccezione server non rilevata,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Il valore non può essere negativo per {0}
 Negative Value,Valore negativo,
 Authentication failed while receiving emails from Email Account: {0}.,Autenticazione non riuscita durante la ricezione di e-mail dall&#39;account e-mail: {0}.,
 Message from server: {0},Messaggio dal server: {0},
+Consumers,Consumatori,
+Event Update Log Consumer,Consumatore registro aggiornamento eventi,
+Row #{0}: Could not find field {1} in {2} DocType,Riga n. {0}: impossibile trovare il campo {1} in {2} DocType,
+Invalid Fieldname,Nome campo non valido,
