--- a/frappe/translations/ku.csv
+++ b/frappe/translations/ku.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Peyam (HTML),
 Send Attachments,Attachments bişînin,
 Testing,Testkirin,
 System Notification,Ragihandina Pergalê,
-WhatsApp,WhatsApp,
 Twilio Number,Hejmara Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Ji bo ku WhatsApp-ê ji bo Karsaziyê bikar bînin, <a href=""#Form/Twilio Settings"">Mîhengên Twilio destpê bikin</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Ji bo karanîna Kanala Slack, <a href=""#List/Slack%20Webhook%20URL/List"">URL-</a> a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook</a> lê zêde bikin.",
 Send System Notification,Ragihandina Pergalê bişînin,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Heke were çalak kirin, dê notification di dropdown notifications de li goşeyê rastê jorîn ê barê navîgasyonê nîşan bide.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,{0} Rapora E-nameya Jixweber nehat şandin,
 Test email sent to {0},E-nameya testê ji {0} re hate şandin,
 Email queued to {0} recipients,E-name ji {0} wergirên re dorê,
 Newsletter should have at least one recipient,Divê di nûçenameyê de herî kêm yek wergir hebe,
-Please enable Twilio settings to send WhatsApp messages,Ji kerema xwe vesazkirinên Twilio çalak bikin ku peyamên WhatsApp bişînin,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Destûr nayê dayin ku {0} belgeyê were girêdan, ji kerema xwe li Destûra Çapkirinê Destûrê bide Çapkirina Ji bo {0}",
 Signup Disabled,Signup Disabled,
 Signups have been disabled for this website.,Tomarkirin ji bo vê malperê hatine qedexekirin.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Razorpay Vermzekirina Rastkirinê Çewtî
 Google Drive - Could not locate - {0},Google Drive - Nikare cîwar bibe - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Token-a senkronîzasyonê nederbasdar bû û hate nûve kirin, Ji nû ve senkronîzekirinê biceribîne.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Ji kerema xwe rêbaza dayina din hilbijêrin. Paytm danûstendinên bi dirava &#39;{0}&#39; piştgirî nake,
-Invalid Account SID or Auth Token.,SID an Nîşana Nûve ya Hesabê nederbasdar.,
-Please enable twilio settings before sending WhatsApp messages,Ji kerema xwe berî şandina peyamên WhatsApp mîhengên twilio çalak bikin,
-Delivery Failed,Delivery Failed,
-Twilio WhatsApp Message Error,Çewtiya Peyama Twilio WhatsApp,
 A featured post must have a cover image,Pêdivî ye ku posteyek nîşankirî wêneyek bergê hebe,
 Load More,Zêde Barkirin,
 Published on,Li ser hate weşandin,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Ji kerem
 Shared with the following Users with Read access:{0},Bi Bikarhênerên jêrîn ên bi Destûra Xwendinê re parvekirî: {0},
 Already in the following Users ToDo list:{0},Jixwe di navnîşa ToDo-ya Bikarhênerên jêrîn de ye: {0},
 Your assignment on {0} {1} has been removed by {2},Peywira we ya li ser {0} {1} ji hêla {2} ve hate rakirin,
+Consumer,Serfkaran,
 Invalid Credentials,Bawernameyên nederbasdar,
 Print UOM after Quantity,Li dû Hêmanê UOM çap bikin,
 Uncaught Server Exception,Pêşkêşkera Serverê ya nehatî girtin,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Nirx nikare ji bo {0} neyînî be: {1},
 Negative Value,Nirxê Neyînî,
 Authentication failed while receiving emails from Email Account: {0}.,Dema ku hûn e-nameyên ji Hesabê E-nameyê werdigirin rastnivîsîn têk çû: {0}.,
 Message from server: {0},Peyama serverê: {0},
+Consumers,Serfkaran,
+Event Update Log Consumer,Serfermandarê Têketina Nûvekirina Bûyerê,
+Row #{0}: Could not find field {1} in {2} DocType,Rêzeya # {0}: Di {2} DocType de qada {1} nedît,
+Invalid Fieldname,Navê Zevî ya nederbasdar,
