--- a/frappe/translations/lv.csv
+++ b/frappe/translations/lv.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Ziņojums (HTML),
 Send Attachments,Sūtīt pielikumus,
 Testing,Testēšana,
 System Notification,Sistēmas paziņojums,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio numurs,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Lai izmantotu WhatsApp for Business, inicializējiet <a href=""#Form/Twilio Settings"">Twilio iestatījumus</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Lai izmantotu Slack Channel, pievienojiet <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a> .",
 Send System Notification,Sūtīt sistēmas paziņojumu,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Ja tas ir iespējots, paziņojums tiks parādīts navigācijas joslas augšējā labajā stūrī nolaižamajā paziņojumos.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Neizdevās nosūtīt {0} automātiskā e-pa
 Test email sent to {0},Pārbaudes e-pasts nosūtīts uz adresi {0},
 Email queued to {0} recipients,E-pasts ir rindā {0} adresātiem,
 Newsletter should have at least one recipient,Biļetenā jābūt vismaz vienam adresātam,
-Please enable Twilio settings to send WhatsApp messages,"Lūdzu, iespējojiet Twilio iestatījumus, lai nosūtītu WhatsApp ziņojumus",
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Nav atļauts pievienot dokumentu {0}. Lūdzu, iespējojiet opciju Atļaut drukāšanu {0} drukas iestatījumos",
 Signup Disabled,Reģistrēšanās ir atspējota,
 Signups have been disabled for this website.,Reģistrēšanās šai vietnei ir atspējota.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Neizdevās pārbaudīt Razorpay parakstu,
 Google Drive - Could not locate - {0},Google disks - nevarēja atrast - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Sinhronizācijas marķieris nebija derīgs, un tas ir atiestatīts. Mēģiniet vēlreiz sinhronizēt.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',"Lūdzu, izvēlieties citu maksājuma veidu. Paytm neatbalsta darījumus valūtā “{0}”",
-Invalid Account SID or Auth Token.,Nederīgs konta SID vai autentifikācijas marķieris.,
-Please enable twilio settings before sending WhatsApp messages,"Pirms WhatsApp ziņojumu sūtīšanas, lūdzu, iespējojiet twilio iestatījumus",
-Delivery Failed,Piegāde neizdevās,
-Twilio WhatsApp Message Error,Twilio WhatsApp ziņojuma kļūda,
 A featured post must have a cover image,Piedāvātajam ziņojumam jābūt vāka attēlam,
 Load More,Ielādēt vairāk,
 Published on,Publicēts vietnē,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,"Lūdzu,
 Shared with the following Users with Read access:{0},Kopīgots ar šiem lietotājiem ar lasīšanas piekļuvi: {0},
 Already in the following Users ToDo list:{0},Jau šajā lietotāju uzdevumu sarakstā: {0},
 Your assignment on {0} {1} has been removed by {2},Jūsu uzdevumu vietnē {0} {1} ir noņēmis {2},
+Consumer,Patērētājs,
 Invalid Credentials,Nederīgi akreditācijas dati,
 Print UOM after Quantity,Drukāt UOM pēc daudzuma,
 Uncaught Server Exception,Neveiksmīgs servera izņēmums,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Vērtība {0} nevar būt negatīva: {1},
 Negative Value,Negatīva vērtība,
 Authentication failed while receiving emails from Email Account: {0}.,"Autentifikācija neizdevās, saņemot e-pasta ziņojumus no e-pasta konta: {0}.",
 Message from server: {0},Ziņojums no servera: {0},
+Consumers,Patērētāji,
+Event Update Log Consumer,Notikumu atjaunināšanas žurnāla patērētājs,
+Row #{0}: Could not find field {1} in {2} DocType,{0}. Rinda: {2} DocType laukā {1} nevar atrast,
+Invalid Fieldname,Nederīgs lauka nosaukums,
