--- a/frappe/translations/ms.csv
+++ b/frappe/translations/ms.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Mesej (HTML),
 Send Attachments,Hantar Lampiran,
 Testing,Ujian,
 System Notification,Pemberitahuan Sistem,
-WhatsApp,WhatsApp,
 Twilio Number,Nombor Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Untuk menggunakan WhatsApp untuk Perniagaan, <a href=""#Form/Twilio Settings"">mulakan Tetapan Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Untuk menggunakan Slack Channel, tambahkan <a href=""#List/Slack%20Webhook%20URL/List"">URL Slack Webhook</a> .",
 Send System Notification,Hantar Pemberitahuan Sistem,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Sekiranya diaktifkan, pemberitahuan akan muncul di menu lungsur pemberitahuan di sudut kanan atas bar navigasi.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Gagal menghantar {0} Laporan E-mel Auto,
 Test email sent to {0},E-mel ujian dihantar ke {0},
 Email queued to {0} recipients,E-mel beratur ke {0} penerima,
 Newsletter should have at least one recipient,Surat berita harus mempunyai sekurang-kurangnya satu penerima,
-Please enable Twilio settings to send WhatsApp messages,Sila aktifkan tetapan Twilio untuk menghantar mesej WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Tidak dibenarkan melampirkan dokumen {0}, sila aktifkan Izinkan Cetakan Untuk {0} dalam Tetapan Cetakan",
 Signup Disabled,Pendaftaran Dilumpuhkan,
 Signups have been disabled for this website.,Pendaftaran telah dilumpuhkan untuk laman web ini.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Pengesahan Tandatangan Razorpay Gagal,
 Google Drive - Could not locate - {0},Google Drive - Tidak dapat mencari - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Token penyegerakan tidak sah dan telah diset semula, Cuba lagi penyegerakan.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Sila pilih kaedah pembayaran lain. Paytm tidak menyokong transaksi dalam mata wang &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,SID Akaun atau Token Auth Tidak Sah.,
-Please enable twilio settings before sending WhatsApp messages,Sila aktifkan tetapan twilio sebelum menghantar mesej WhatsApp,
-Delivery Failed,Penghantaran gagal,
-Twilio WhatsApp Message Error,Ralat Mesej WhatsApp Twilio,
 A featured post must have a cover image,Catatan yang dipaparkan mesti mempunyai gambar muka depan,
 Load More,Tambah lagi,
 Published on,Diterbitkan pada,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Sila tet
 Shared with the following Users with Read access:{0},Dikongsi dengan Pengguna berikut dengan akses Baca: {0},
 Already in the following Users ToDo list:{0},Sudah ada dalam senarai ToDo Pengguna berikut: {0},
 Your assignment on {0} {1} has been removed by {2},Tugasan anda pada {0} {1} telah dikeluarkan oleh {2},
+Consumer,Pengguna,
 Invalid Credentials,Kelayakan Tidak Sah,
 Print UOM after Quantity,Cetak UOM selepas Kuantiti,
 Uncaught Server Exception,Pengecualian Pelayan yang Tidak Terperangkap,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Nilai tidak boleh negatif untuk {0}: {1},
 Negative Value,Nilai Negatif,
 Authentication failed while receiving emails from Email Account: {0}.,Pengesahan gagal semasa menerima e-mel dari Akaun E-mel: {0}.,
 Message from server: {0},Mesej dari pelayan: {0},
+Consumers,Pengguna,
+Event Update Log Consumer,Pengguna Log Kemas Kini Acara,
+Row #{0}: Could not find field {1} in {2} DocType,Baris # {0}: Tidak dapat mencari medan {1} dalam {2} DocType,
+Invalid Fieldname,Nama Medan Tidak Sah,
