--- a/frappe/translations/nl.csv
+++ b/frappe/translations/nl.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Bericht (HTML),
 Send Attachments,Bijlagen verzenden,
 Testing,Testen,
 System Notification,Systeemmelding,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio-nummer,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Initialiseer <a href=""#Form/Twilio Settings"">Twilio-instellingen</a> om WhatsApp for Business te gebruiken.",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Om Slack Channel te gebruiken, voegt u een <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook-URL toe</a> .",
 Send System Notification,Systeemmelding verzenden,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Indien ingeschakeld, wordt de melding weergegeven in de vervolgkeuzelijst met meldingen in de rechterbovenhoek van de navigatiebalk.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Verzenden van {0} automatisch e-mailrapport
 Test email sent to {0},Test-e-mail verzonden naar {0},
 Email queued to {0} recipients,E-mail in de wachtrij voor {0} ontvangers,
 Newsletter should have at least one recipient,De nieuwsbrief moet ten minste één ontvanger hebben,
-Please enable Twilio settings to send WhatsApp messages,Schakel de Twilio-instellingen in om WhatsApp-berichten te verzenden,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings",Het is niet toegestaan om een {0} document bij te voegen. Schakel Afdrukken toestaan voor {0} in de afdrukinstellingen in,
 Signup Disabled,Aanmelden uitgeschakeld,
 Signups have been disabled for this website.,Aanmeldingen voor deze website zijn uitgeschakeld.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Verificatie van Razorpay-handtekening mis
 Google Drive - Could not locate - {0},Google Drive - Kan niet vinden - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Synchronisatietoken was ongeldig en is opnieuw ingesteld, probeer opnieuw te synchroniseren.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Selecteer een andere betalingsmethode. Paytm ondersteunt geen transacties in valuta &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,Ongeldige account-SID of verificatie-token.,
-Please enable twilio settings before sending WhatsApp messages,Schakel de Twilio-instellingen in voordat u WhatsApp-berichten verzendt,
-Delivery Failed,Bezorging mislukt,
-Twilio WhatsApp Message Error,Twilio WhatsApp-berichtfout,
 A featured post must have a cover image,Een uitgelicht bericht moet een omslagafbeelding hebben,
 Load More,Meer laden,
 Published on,gepubliceerd op,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Stel eer
 Shared with the following Users with Read access:{0},Gedeeld met de volgende gebruikers met leestoegang: {0},
 Already in the following Users ToDo list:{0},Staat al in de volgende takenlijst van gebruikers: {0},
 Your assignment on {0} {1} has been removed by {2},Je opdracht op {0} {1} is verwijderd door {2},
+Consumer,Klant,
 Invalid Credentials,Ongeldige inloggegevens,
 Print UOM after Quantity,Druk maateenheid af na aantal,
 Uncaught Server Exception,Niet-afgevangen serveruitzondering,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Waarde mag niet negatief zijn voor {0}: {1
 Negative Value,Negatieve waarde,
 Authentication failed while receiving emails from Email Account: {0}.,Verificatie mislukt tijdens het ontvangen van e-mails van e-mailaccount: {0}.,
 Message from server: {0},Bericht van server: {0},
+Consumers,Consumenten,
+Event Update Log Consumer,Gebeurtenis Update Log Consument,
+Row #{0}: Could not find field {1} in {2} DocType,Rij # {0}: kan veld {1} niet vinden in {2} DocType,
+Invalid Fieldname,Ongeldige veldnaam,
