--- a/frappe/translations/no.csv
+++ b/frappe/translations/no.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Melding (HTML),
 Send Attachments,Send vedlegg,
 Testing,Testing,
 System Notification,Systemvarsling,
-WhatsApp,Hva skjer,
 Twilio Number,Twilio-nummer,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","For å bruke WhatsApp for Business, initialiser <a href=""#Form/Twilio Settings"">Twilio Settings</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","For å bruke Slack Channel, legg til en <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a> .",
 Send System Notification,Send systemvarsling,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Hvis aktivert, vises varselet i rullegardinmenyen for varsler øverst til høyre på navigasjonsfeltet.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Kunne ikke sende {0} automatisk e-postrappo
 Test email sent to {0},Test-e-post sendt til {0},
 Email queued to {0} recipients,E-post i kø til {0} mottakere,
 Newsletter should have at least one recipient,Nyhetsbrevet bør ha minst en mottaker,
-Please enable Twilio settings to send WhatsApp messages,Aktiver Twilio-innstillingene for å sende WhatsApp-meldinger,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings",Ikke tillatt å legge ved {0} dokument. Aktiver Tillat utskrift for {0} i Utskriftsinnstillinger,
 Signup Disabled,Registrering deaktivert,
 Signups have been disabled for this website.,Påmeldinger er deaktivert for dette nettstedet.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Bekreftelse av Razorpay signatur mislykte
 Google Drive - Could not locate - {0},Google Disk - kunne ikke finne - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Synkroniseringstoken var ugyldig og er tilbakestilt. Prøv å synkronisere på nytt.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Velg en annen betalingsmåte. Paytm støtter ikke transaksjoner i valutaen {0},
-Invalid Account SID or Auth Token.,Ugyldig konto-SID eller godkjenningstoken.,
-Please enable twilio settings before sending WhatsApp messages,Aktiver twilio-innstillinger før du sender WhatsApp-meldinger,
-Delivery Failed,Levering feilet,
-Twilio WhatsApp Message Error,Twilio WhatsApp melding feil,
 A featured post must have a cover image,Et utvalgt innlegg må ha et forsidebilde,
 Load More,Last mer,
 Published on,Publisert den,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Angi fø
 Shared with the following Users with Read access:{0},Delt med følgende brukere med lesetilgang: {0},
 Already in the following Users ToDo list:{0},Allerede i følgende ToDo-liste over brukere: {0},
 Your assignment on {0} {1} has been removed by {2},Oppgaven din på {0} {1} er fjernet av {2},
+Consumer,Forbruker,
 Invalid Credentials,Ugyldige legitimasjon,
 Print UOM after Quantity,Skriv ut UOM etter antall,
 Uncaught Server Exception,Unfanget server unntak,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Verdien kan ikke være negativ for {0}: {1
 Negative Value,Negativ verdi,
 Authentication failed while receiving emails from Email Account: {0}.,Autentiseringen mislyktes når du mottok e-post fra e-postkontoen: {0}.,
 Message from server: {0},Melding fra server: {0},
+Consumers,Forbrukere,
+Event Update Log Consumer,Hendelsesoppdateringsloggforbruker,
+Row #{0}: Could not find field {1} in {2} DocType,Rad nr. {0}: Fant ikke feltet {1} i {2} DocType,
+Invalid Fieldname,Ugyldig feltnavn,
