--- a/frappe/translations/pl.csv
+++ b/frappe/translations/pl.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Wiadomość (HTML),
 Send Attachments,Wyślij załączniki,
 Testing,Testowanie,
 System Notification,Powiadomienie systemowe,
-WhatsApp,WhatsApp,
 Twilio Number,Numer Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Aby korzystać z WhatsApp dla firm, zainicjuj <a href=""#Form/Twilio Settings"">ustawienia Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Aby korzystać z kanału Slack, dodaj <a href=""#List/Slack%20Webhook%20URL/List"">adres URL Slack Webhook</a> .",
 Send System Notification,Wyślij powiadomienie systemowe,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Jeśli jest włączona, powiadomienie pojawi się na liście powiadomień w prawym górnym rogu paska nawigacyjnego.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Nie udało się wysłać {0} automatycznego
 Test email sent to {0},Testowy e-mail wysłany na adres {0},
 Email queued to {0} recipients,E-mail w kolejce do {0} odbiorców,
 Newsletter should have at least one recipient,Newsletter powinien mieć co najmniej jednego odbiorcę,
-Please enable Twilio settings to send WhatsApp messages,"Włącz ustawienia Twilio, aby wysyłać wiadomości WhatsApp",
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings",Nie można dołączyć dokumentu {0}. Włącz opcję Zezwalaj na drukowanie dla {0} w Ustawieniach drukowania,
 Signup Disabled,Rejestracja wyłączona,
 Signups have been disabled for this website.,Rejestracja została wyłączona w tej witrynie.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Weryfikacja podpisu Razorpay nie powiodł
 Google Drive - Could not locate - {0},Dysk Google - nie można zlokalizować - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Token synchronizacji był nieprawidłowy i został zresetowany. Ponów próbę synchronizacji.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Wybierz inną metodę płatności. Paytm nie obsługuje transakcji w walucie „{0}”,
-Invalid Account SID or Auth Token.,Nieprawidłowy identyfikator SID konta lub token autoryzacji.,
-Please enable twilio settings before sending WhatsApp messages,Włącz ustawienia Twilio przed wysyłaniem wiadomości WhatsApp,
-Delivery Failed,Dostawa zawiodła,
-Twilio WhatsApp Message Error,Błąd wiadomości Twilio WhatsApp,
 A featured post must have a cover image,Polecany post musi mieć zdjęcie w tle,
 Load More,Załaduj więcej,
 Published on,Opublikowano,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Najpierw
 Shared with the following Users with Read access:{0},Udostępnione następującym użytkownikom z prawem do odczytu: {0},
 Already in the following Users ToDo list:{0},Już na następującej liście użytkowników do zrobienia: {0},
 Your assignment on {0} {1} has been removed by {2},Twoje zadanie z {0} {1} zostało usunięte przez {2},
+Consumer,Konsument,
 Invalid Credentials,Nieprawidłowe dane logowania,
 Print UOM after Quantity,Drukuj UOM po Quantity,
 Uncaught Server Exception,Niezłapany wyjątek serwera,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Wartość nie może być ujemna dla {0}: {
 Negative Value,Ujemna wartość,
 Authentication failed while receiving emails from Email Account: {0}.,Uwierzytelnianie nie powiodło się podczas odbierania wiadomości e-mail z konta e-mail: {0}.,
 Message from server: {0},Wiadomość z serwera: {0},
+Consumers,Konsumenci,
+Event Update Log Consumer,Konsument dziennika aktualizacji zdarzeń,
+Row #{0}: Could not find field {1} in {2} DocType,Wiersz nr {0}: nie można znaleźć pola {1} w {2} DocType,
+Invalid Fieldname,Nieprawidłowa nazwa pola,
