--- a/frappe/translations/ps.csv
+++ b/frappe/translations/ps.csv
@@ -4400,9 +4400,7 @@ Message (HTML),پیغام (HTML),
 Send Attachments,ملحقات ولېږئ,
 Testing,ازموینه,
 System Notification,سیسټم خبرتیا,
-WhatsApp,WhatsApp,
 Twilio Number,دوهم نمبر,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","د سوداګرۍ لپاره واټس اپ کارولو لپاره ، د دوهم ځل <a href=""#Form/Twilio Settings"">تنظیموونې</a> پیل کړئ.",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","د سلیک چینل کارولو لپاره ، د <a href=""#List/Slack%20Webhook%20URL/List"">سلیک ویب هک یو آر ایل</a> اضافه کړئ.",
 Send System Notification,د سیسټم خبرتیا واستوئ,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.",که چیرې فعال شوی وي ، نوټیفیکیشن به د نیوی گیشن بار په پورتنۍ ښیې کونج کې د خبرونو په غورځیدلو کې ښکاره شي.,
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,د} 0} اتومات بریښنالیک را
 Test email sent to {0},ازموینې بریښنالیک {0 to ته لیږل شوی,
 Email queued to {0} recipients,بریښنالیک {0} ترلاسه کونکو ته قطار شوی,
 Newsletter should have at least one recipient,خبر پاterه باید لږترلږه یو ترلاسه کونکی ولري,
-Please enable Twilio settings to send WhatsApp messages,مهرباني وکړئ د WhatsApp پیغامونو لیږلو لپاره د طلوع تنظیمات فعال کړئ,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings",د {0} سند ضمیمه کولو ته اجازه نشته ، مهرباني وکړئ د چاپ امستنو کې د {0 For لپاره د چاپ اجازه فعال کړئ,
 Signup Disabled,ننوتل نافعال شوي,
 Signups have been disabled for this website.,د دې ویب پا forې لپاره لاسلیکونه غیر فعال شوي دي.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,د ریزارپي لاسلیک تایید
 Google Drive - Could not locate - {0},ګوګل ډرائیو - نشو موندلی - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",د هماهنګ کولو نښه ناباوره وه او له سره جوړه شوې ، له سره همغږۍ بیا هڅه وکړئ.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',مهرباني وکړئ د تادیې بله لاره غوره کړئ. پیټیم د اسعارو &#39;{0}&#39; معاملې ملاتړ نه کوي,
-Invalid Account SID or Auth Token.,ناباوره حساب SID یا د آوت توکین.,
-Please enable twilio settings before sending WhatsApp messages,مهرباني وکړئ د WhatsApp پیغامونو لیږلو دمخه دوه ګوني تنظیمات فعال کړئ,
-Delivery Failed,تحویلۍ ونشول,
-Twilio WhatsApp Message Error,د Twilio WhatsApp پیغام خطا,
 A featured post must have a cover image,یو ځانګړی پوسټ باید د پوښ عکس ولري,
 Load More,نور ولګوه,
 Published on,په خپور شوی,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,مهرب
 Shared with the following Users with Read access:{0},د لوستلو لاسرسي سره لاندې کاروونکو سره شریکه شوې: {0},
 Already in the following Users ToDo list:{0},دمخه د لاندې کارونکو تودو لیست کې: {0},
 Your assignment on {0} {1} has been removed by {2},ستاسو دنده په {0} {1} {2} لخوا لرې شوې,
+Consumer,مصرف کونکی,
 Invalid Credentials,ناباوره سندونه,
 Print UOM after Quantity,د مقدار وروسته UOM چاپ کړئ,
 Uncaught Server Exception,د نه ښوول شوي سرور استثنا,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},ارزښت د {0} لپاره منفي نش
 Negative Value,منفي ارزښت,
 Authentication failed while receiving emails from Email Account: {0}.,اعتبار د بریښنالیک حساب څخه د بریښنالیکونو ترلاسه کولو پر مهال ناکام شو: {0}.,
 Message from server: {0},د سرور لخوا پیغام: {0},
+Consumers,مصرف کونکي,
+Event Update Log Consumer,د پیښې تازه لاګ مصرف کونکی,
+Row #{0}: Could not find field {1} in {2} DocType,قطار # {0}: په {2} ډاک ټایپ کې د {1} ساحه ونه موندل شوه,
+Invalid Fieldname,ناباوره ساحه,
