--- a/frappe/translations/pt.csv
+++ b/frappe/translations/pt.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Mensagem (HTML),
 Send Attachments,Enviar anexos,
 Testing,Testando,
 System Notification,Notificação do sistema,
-WhatsApp,Whatsapp,
 Twilio Number,Número Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Para usar o WhatsApp for Business, inicialize as <a href=""#Form/Twilio Settings"">configurações do Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Para usar o Slack Channel, adicione um <a href=""#List/Slack%20Webhook%20URL/List"">URL do Slack Webhook</a> .",
 Send System Notification,Enviar Notificação do Sistema,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Se ativada, a notificação aparecerá na lista suspensa de notificações no canto superior direito da barra de navegação.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Falha ao enviar {0} relatório de e-mail au
 Test email sent to {0},Email de teste enviado para {0},
 Email queued to {0} recipients,Email na fila para {0} destinatários,
 Newsletter should have at least one recipient,O boletim deve ter pelo menos um destinatário,
-Please enable Twilio settings to send WhatsApp messages,Ative as configurações do Twilio para enviar mensagens do WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Não tem permissão para anexar documento {0}, ative Permitir impressão para {0} nas configurações de impressão",
 Signup Disabled,Inscrição Desativada,
 Signups have been disabled for this website.,As inscrições foram desativadas para este site.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Falha na verificação da assinatura Razo
 Google Drive - Could not locate - {0},Google Drive - Não foi possível localizar - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",O token de sincronização era inválido e foi redefinido. Tente sincronizar novamente.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Selecione outro método de pagamento. Paytm não suporta transações na moeda &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,SID de conta ou token de autenticação inválido.,
-Please enable twilio settings before sending WhatsApp messages,Ative as configurações do twilio antes de enviar mensagens do WhatsApp,
-Delivery Failed,Falha na entrega,
-Twilio WhatsApp Message Error,Twilio WhatsApp Message Error,
 A featured post must have a cover image,Uma postagem em destaque deve ter uma imagem de capa,
 Load More,Carregue mais,
 Published on,publicado em,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Defina o
 Shared with the following Users with Read access:{0},Compartilhado com os seguintes usuários com acesso de leitura: {0},
 Already in the following Users ToDo list:{0},Já está na seguinte lista de tarefas de usuários: {0},
 Your assignment on {0} {1} has been removed by {2},Sua tarefa em {0} {1} foi removida por {2},
+Consumer,Consumidor,
 Invalid Credentials,Credenciais inválidas,
 Print UOM after Quantity,Imprimir UOM após a quantidade,
 Uncaught Server Exception,Exceção de servidor não detectado,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},O valor não pode ser negativo para {0}: {
 Negative Value,Valor Negativo,
 Authentication failed while receiving emails from Email Account: {0}.,Falha na autenticação ao receber e-mails da conta de e-mail: {0}.,
 Message from server: {0},Mensagem do servidor: {0},
+Consumers,Consumidores,
+Event Update Log Consumer,Consumidor de log de atualização de evento,
+Row #{0}: Could not find field {1} in {2} DocType,Linha # {0}: Não foi possível encontrar o campo {1} em {2} DocType,
+Invalid Fieldname,Fieldname inválido,
