--- a/frappe/translations/rw.csv
+++ b/frappe/translations/rw.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Ubutumwa (HTML),
 Send Attachments,Kohereza Umugereka,
 Testing,Kwipimisha,
 System Notification,Kumenyesha Sisitemu,
-WhatsApp,WhatsApp,
 Twilio Number,Umubare wa Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Gukoresha WhatsApp kubucuruzi, tangira <a href=""#Form/Twilio Settings"">Igenamiterere rya Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Koresha Umuyoboro wa Slack, <a href=""#List/Slack%20Webhook%20URL/List"">ongeramo URL ya Slack Webhook</a> .",
 Send System Notification,Kohereza imenyesha rya sisitemu,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Nibishoboka, imenyesha rizerekanwa mumatangazo yamanutse hejuru yiburyo bwiburyo bwo kugenda.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Kunanirwa kohereza {0} Raporo ya imeri,
 Test email sent to {0},Imeri yikizamini yoherejwe kuri {0},
 Email queued to {0} recipients,Imeri yatonze umurongo kubakirwa {0},
 Newsletter should have at least one recipient,Akanyamakuru kagomba kugira byibuze uwakiriye,
-Please enable Twilio settings to send WhatsApp messages,Nyamuneka ushoboze gukora igenamiterere rya Twilio kohereza ubutumwa bwa WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Ntabwo byemewe kugerekaho {0} inyandiko, nyamuneka Emera Icapa Kuri {0} mugucapisha Igenamiterere",
 Signup Disabled,Kwiyandikisha byahagaritswe,
 Signups have been disabled for this website.,Kwiyandikisha byahagaritswe kururu rubuga.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Kugenzura umukono wa Razorpay byarananira
 Google Drive - Could not locate - {0},Google Drive - Ntushobora kumenya - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Ikimenyetso cyo guhuza nticyemewe kandi cyongeye gusubirwamo, Ongera ugerageze.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Nyamuneka hitamo ubundi buryo bwo kwishyura. Paytm ntabwo ishigikira ibikorwa byamafaranga &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,Konti itemewe SID cyangwa Auth Token.,
-Please enable twilio settings before sending WhatsApp messages,Nyamuneka ushoboze gukora igenamiterere rya twilio mbere yo kohereza ubutumwa bwa WhatsApp,
-Delivery Failed,Gutanga byarananiranye,
-Twilio WhatsApp Message Error,Twilio WhatsApp Ubutumwa Ikosa,
 A featured post must have a cover image,Inyandiko igaragara igomba kuba ifite igifuniko,
 Load More,Fata Ibindi,
 Published on,Byatangajwe kuri,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Nyamunek
 Shared with the following Users with Read access:{0},Basangiye nabakoresha bakurikira hamwe Gusoma: {0},
 Already in the following Users ToDo list:{0},Usanzwe mubakurikira Abakoresha ToDo urutonde: {0},
 Your assignment on {0} {1} has been removed by {2},Umukoro wawe kuri {0} {1} wakuweho na {2},
+Consumer,Umuguzi,
 Invalid Credentials,Ibyangombwa bitemewe,
 Print UOM after Quantity,Shira UOM nyuma yumubare,
 Uncaught Server Exception,Seriveri idasanzwe,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Agaciro ntigashobora kuba kibi kuri {0}: {
 Negative Value,Agaciro,
 Authentication failed while receiving emails from Email Account: {0}.,Kwemeza byarananiranye mugihe wakiriye imeri kuri konte imeri: {0}.,
 Message from server: {0},Ubutumwa buva kuri seriveri: {0},
+Consumers,Abaguzi,
+Event Update Log Consumer,Kuvugurura Ibyabaye Umuguzi,
+Row #{0}: Could not find field {1} in {2} DocType,Umurongo # {0}: Ntushobora kubona umurima {1} muri {2} Inyandiko,
+Invalid Fieldname,Izina ryemewe,
