--- a/frappe/translations/sk.csv
+++ b/frappe/translations/sk.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Správa (HTML),
 Send Attachments,Odoslať prílohy,
 Testing,Testovanie,
 System Notification,Oznámenie systému,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio číslo,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Ak chcete používať WhatsApp pre firmy, inicializujte <a href=""#Form/Twilio Settings"">Twilio nastavenia</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Ak chcete použiť Slack Channel, pridajte <a href=""#List/Slack%20Webhook%20URL/List"">webovú adresu Slack Webhook</a> .",
 Send System Notification,Odoslať systémové oznámenie,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Ak je táto možnosť povolená, upozornenie sa zobrazí v rozbaľovacej ponuke upozornení v pravom hornom rohu navigačného panela.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Nepodarilo sa odoslať {0} automatický e-m
 Test email sent to {0},Testovací e-mail bol odoslaný na adresu {0},
 Email queued to {0} recipients,E-mail zaradený do poradia {0} príjemcov,
 Newsletter should have at least one recipient,Newsletter by mal mať minimálne jedného príjemcu,
-Please enable Twilio settings to send WhatsApp messages,Povoľte nastavenie Twilio na odosielanie správ WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Nie je povolené priložiť dokument {0}, v nastaveniach tlače povoľte možnosť Povoliť tlač pre {0}",
 Signup Disabled,Registrácia zakázaná,
 Signups have been disabled for this website.,Na tomto webe boli zakázané registrácie.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Overenie podpisu Razorpay zlyhalo,
 Google Drive - Could not locate - {0},Disk Google - nepodarilo sa nájsť - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Token synchronizácie bol neplatný a bol obnovený, skúste synchronizáciu zopakovať.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Vyberte iný spôsob platby. Paytm nepodporuje transakcie v mene „{0}“,
-Invalid Account SID or Auth Token.,Neplatný identifikátor SID alebo token overenia.,
-Please enable twilio settings before sending WhatsApp messages,Pred odosielaním správ WhatsApp povoľte nastavenie twilio,
-Delivery Failed,Doručenie zlyhalo,
-Twilio WhatsApp Message Error,Chyba správy Twilio WhatsApp,
 A featured post must have a cover image,Odporúčaný príspevok musí mať titulný obrázok,
 Load More,Načítať viac,
 Published on,Publikované dňa,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Najskôr
 Shared with the following Users with Read access:{0},Zdieľané s nasledujúcimi používateľmi s prístupom na čítanie: {0},
 Already in the following Users ToDo list:{0},Tento zoznam úloh používateľov je už uvedený v zozname: {0},
 Your assignment on {0} {1} has been removed by {2},Vaša úloha dňa {0} {1} bola odstránená používateľom {2},
+Consumer,Spotrebiteľ,
 Invalid Credentials,Neplatné poverenia,
 Print UOM after Quantity,Tlač MJ po množstve,
 Uncaught Server Exception,Nezachytená serverová výnimka,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Hodnota nemôže byť záporná pre {0}: {
 Negative Value,Záporná hodnota,
 Authentication failed while receiving emails from Email Account: {0}.,Pri prijímaní e-mailov z e-mailového účtu zlyhalo overenie: {0}.,
 Message from server: {0},Správa zo servera: {0},
+Consumers,Spotrebitelia,
+Event Update Log Consumer,Spotrebiteľ protokolu udalostí,
+Row #{0}: Could not find field {1} in {2} DocType,Riadok č. {0}: Nepodarilo sa nájsť pole {1} v dokumente {2} DocType,
+Invalid Fieldname,Neplatný názov poľa,
