--- a/frappe/translations/sl.csv
+++ b/frappe/translations/sl.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Sporočilo (HTML),
 Send Attachments,Pošlji priloge,
 Testing,Testiranje,
 System Notification,Obvestilo o sistemu,
-WhatsApp,WhatsApp,
 Twilio Number,Številka Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Če želite uporabljati WhatsApp za podjetja, inicializirajte <a href=""#Form/Twilio Settings"">nastavitve Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Če želite uporabiti Slack Channel, dodajte <a href=""#List/Slack%20Webhook%20URL/List"">URL Slack Webhook</a> .",
 Send System Notification,Pošlji sistemsko obvestilo,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Če je omogočeno, se obvestilo prikaže v spustnem meniju za obvestila v zgornjem desnem kotu vrstice za krmarjenje.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Pošiljanja {0} samodejnega poročila po e-
 Test email sent to {0},Preizkusno e-poštno sporočilo je bilo poslano na naslov {0},
 Email queued to {0} recipients,E-pošta je bila v čakalni vrsti do {0} prejemnikov,
 Newsletter should have at least one recipient,Glasilo mora imeti vsaj enega prejemnika,
-Please enable Twilio settings to send WhatsApp messages,"Prosimo, omogočite nastavitve Twilio za pošiljanje sporočil WhatsApp",
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Ni dovoljeno pripeti dokumenta {0}, v nastavitvah tiskanja omogočite možnost Dovoli tiskanje za {0}",
 Signup Disabled,Prijava onemogočena,
 Signups have been disabled for this website.,Prijave za to spletno mesto so onemogočene.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Preverjanje podpisa Razorpay ni uspelo,
 Google Drive - Could not locate - {0},Google Drive - ni bilo mogoče najti - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Žeton za sinhronizacijo ni bil veljaven in je bil ponastavljen. Poskusite znova sinhronizacijo.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Izberite drugo plačilno sredstvo. Paytm ne podpira transakcij v valuti &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,Neveljaven SID računa ali žeton za odobritev.,
-Please enable twilio settings before sending WhatsApp messages,Pred pošiljanjem sporočil WhatsApp omogočite nastavitve twilio,
-Delivery Failed,Dostava ni uspela,
-Twilio WhatsApp Message Error,Napaka sporočila Twilio WhatsApp,
 A featured post must have a cover image,Predstavljena objava mora imeti sliko naslovnice,
 Load More,Naloži več,
 Published on,Objavljeno dne,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Na tej n
 Shared with the following Users with Read access:{0},V skupni rabi z naslednjimi uporabniki z dostopom za branje: {0},
 Already in the following Users ToDo list:{0},Že na naslednjem seznamu opravil za uporabnike: {0},
 Your assignment on {0} {1} has been removed by {2},Oseba {2} je vašo nalogo {0} {1} odstranila,
+Consumer,Potrošnik,
 Invalid Credentials,Neveljavna pooblastila,
 Print UOM after Quantity,Natisni UOM po količini,
 Uncaught Server Exception,Neznana izjema strežnika,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Vrednost ne more biti negativna za {0}: {1
 Negative Value,Negativna vrednost,
 Authentication failed while receiving emails from Email Account: {0}.,Preverjanje pristnosti med prejemanjem e-poštnih sporočil iz e-poštnega računa ni uspelo: {0}.,
 Message from server: {0},Sporočilo s strežnika: {0},
+Consumers,Potrošniki,
+Event Update Log Consumer,Potrošnik dnevnika posodobitev dogodkov,
+Row #{0}: Could not find field {1} in {2} DocType,Vrstica # {0}: polja {1} v {2} DocType ni bilo mogoče najti,
+Invalid Fieldname,Neveljavno ime polja,
