--- a/frappe/translations/sq.csv
+++ b/frappe/translations/sq.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Mesazhi (HTML),
 Send Attachments,Dërgoni bashkëngjitje,
 Testing,Duke testuar,
 System Notification,Njoftimi i sistemit,
-WhatsApp,WhatsApp,
 Twilio Number,Numri Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Për të përdorur WhatsApp për Biznes, <a href=""#Form/Twilio Settings"">filloni Cilësimet e Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Për të përdorur Slack Channel, shtoni një <a href=""#List/Slack%20Webhook%20URL/List"">URL Slack Webhook</a> .",
 Send System Notification,Dërgoni njoftimin e sistemit,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Nëse është aktivizuar, njoftimi do të shfaqet në zbritjen e njoftimeve në këndin e sipërm të djathtë të shiritit të navigimit.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Dërgimi i {0} Raportit Automatik të Email
 Test email sent to {0},Email-i provë u dërgua te {0},
 Email queued to {0} recipients,Email në radhë për {0} marrësit,
 Newsletter should have at least one recipient,Buletini duhet të ketë të paktën një marrës,
-Please enable Twilio settings to send WhatsApp messages,Ju lutemi aktivizoni cilësimet e Twilio për të dërguar mesazhe në WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Nuk lejohet të bashkëngjitni {0} dokumentin, ju lutemi aktivizoni Lejo Shtypjen për {0} në Cilësimet e Printimit",
 Signup Disabled,Regjistrimi është i çaktivizuar,
 Signups have been disabled for this website.,Regjistrimet janë çaktivizuar për këtë faqe në internet.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Verifikimi i Nënshkrimit Razorpay Dësht
 Google Drive - Could not locate - {0},Google Drive - Nuk mund të lokalizohet - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Shenja e sinkronizimit ishte e pavlefshme dhe është rivendosur, riprovo sinkronizimin.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Ju lutemi zgjidhni një mënyrë tjetër pagese. Paytm nuk mbështet transaksione në monedhën &quot;{0}&quot;,
-Invalid Account SID or Auth Token.,Llogaria e pavlefshme SID ose Auth Token.,
-Please enable twilio settings before sending WhatsApp messages,Ju lutemi aktivizoni cilësimet e twilio përpara se të dërgoni mesazhe në WhatsApp,
-Delivery Failed,Dorëzimi dështoi,
-Twilio WhatsApp Message Error,Gabim mesazhi Twilio WhatsApp,
 A featured post must have a cover image,Një postim i paraqitur duhet të ketë një imazh të kopertinës,
 Load More,Ngarko më shumë,
 Published on,Botuar më,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Ju lutem
 Shared with the following Users with Read access:{0},Ndarë me përdoruesit e mëposhtëm me qasje leximi: {0},
 Already in the following Users ToDo list:{0},Tashmë në listën e mëposhtme të përdoruesve për të bërë: {0},
 Your assignment on {0} {1} has been removed by {2},Detyra juaj në {0} {1} është hequr nga {2},
+Consumer,Konsumatori,
 Invalid Credentials,Kredenciale të pavlefshme,
 Print UOM after Quantity,Shtypni UOM pas Sasisë,
 Uncaught Server Exception,Përjashtim i serverit të pa kapur,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Vlera nuk mund të jetë negative për {0}
 Negative Value,Vlera negative,
 Authentication failed while receiving emails from Email Account: {0}.,Vërtetimi dështoi gjatë marrjes së postave elektronike nga llogaria e postës elektronike: {0}.,
 Message from server: {0},Mesazh nga serveri: {0},
+Consumers,Konsumatorët,
+Event Update Log Consumer,Konsumatori i Regjistrimit të Përditësimit të Ngjarjes,
+Row #{0}: Could not find field {1} in {2} DocType,Rreshti # {0}: Nuk mund të gjesh fushën {1} në {2} DocType,
+Invalid Fieldname,Emër fushe i pavlefshëm,
