--- a/frappe/translations/sv.csv
+++ b/frappe/translations/sv.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Meddelande (HTML),
 Send Attachments,Skicka bilagor,
 Testing,Testning,
 System Notification,Systemmeddelande,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio-nummer,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","För att använda WhatsApp for Business, initialisera <a href=""#Form/Twilio Settings"">Twilio Settings</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","För att använda Slack Channel, lägg till en <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a> .",
 Send System Notification,Skicka systemavisering,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.",Om det är aktiverat kommer meddelandet att visas i rullgardinsmenyn för meddelanden i det övre högra hörnet av navigeringsfältet.,
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Det gick inte att skicka {0} automatisk e-p
 Test email sent to {0},Test-e-post skickat till {0},
 Email queued to {0} recipients,E-post i kö till {0} mottagare,
 Newsletter should have at least one recipient,Nyhetsbrevet bör ha minst en mottagare,
-Please enable Twilio settings to send WhatsApp messages,Aktivera Twilio-inställningarna för att skicka WhatsApp-meddelanden,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Inte tillåtet att bifoga {0} dokument, aktivera Tillåt utskrift för {0} i utskriftsinställningar",
 Signup Disabled,Registrering inaktiverad,
 Signups have been disabled for this website.,Registrering har inaktiverats för den här webbplatsen.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Verifiering av Razorpay-signatur misslyck
 Google Drive - Could not locate - {0},Google Drive - Det gick inte att hitta - {0},
 "Sync token was invalid and has been resetted, Retry syncing.",Synkroniseringstoken var ogiltig och har återställts. Försök igen med synkronisering.,
 Please select another payment method. Paytm does not support transactions in currency '{0}',Välj en annan betalningsmetod. Paytm stöder inte transaktioner i valutan &quot;{0}&quot;,
-Invalid Account SID or Auth Token.,Ogiltigt kontosid eller autent-token.,
-Please enable twilio settings before sending WhatsApp messages,Aktivera twilio-inställningar innan du skickar WhatsApp-meddelanden,
-Delivery Failed,Leveransen misslyckades,
-Twilio WhatsApp Message Error,Twilio WhatsApp-meddelandefel,
 A featured post must have a cover image,Ett utvalt inlägg måste ha en omslagsbild,
 Load More,Ladda mer,
 Published on,publicerad på,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Ange fö
 Shared with the following Users with Read access:{0},Delas med följande användare med läsbehörighet: {0},
 Already in the following Users ToDo list:{0},Finns redan i följande ToDo-lista för användare: {0},
 Your assignment on {0} {1} has been removed by {2},Din uppgift på {0} {1} har tagits bort av {2},
+Consumer,Konsument,
 Invalid Credentials,Ogiltiga uppgifter,
 Print UOM after Quantity,Skriv UOM efter kvantitet,
 Uncaught Server Exception,Uncaught Server Exception,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Värde kan inte vara negativt för {0}: {1
 Negative Value,Negativt värde,
 Authentication failed while receiving emails from Email Account: {0}.,Autentiseringen misslyckades när e-postmeddelanden togs emot från e-postkontot: {0}.,
 Message from server: {0},Meddelande från servern: {0},
+Consumers,Konsumenter,
+Event Update Log Consumer,Händelseuppdateringsloggkonsument,
+Row #{0}: Could not find field {1} in {2} DocType,Rad # {0}: Det gick inte att hitta fältet {1} i {2} DocType,
+Invalid Fieldname,Ogiltigt fältnamn,
