--- a/frappe/translations/sw.csv
+++ b/frappe/translations/sw.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Ujumbe (HTML),
 Send Attachments,Tuma Viambatisho,
 Testing,Upimaji,
 System Notification,Arifa ya Mfumo,
-WhatsApp,WhatsApp,
 Twilio Number,Nambari ya Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Ili utumie WhatsApp kwa Biashara, <a href=""#Form/Twilio Settings"">anzisha Mipangilio ya Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Kutumia Slack Channel, ongeza <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a> .",
 Send System Notification,Tuma Arifa ya Mfumo,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Ikiwashwa, arifa itaonekana kwenye menyu kunjuzi ya arifa kwenye kona ya juu kulia ya upau wa kusogeza.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Imeshindwa kutuma {0} Ripoti ya Barua Pepe 
 Test email sent to {0},Barua pepe ya jaribio imetumwa kwa {0},
 Email queued to {0} recipients,Barua pepe imetumwa kwa foleni kwa {0} wapokeaji,
 Newsletter should have at least one recipient,Jarida linapaswa kuwa na angalau mpokeaji mmoja,
-Please enable Twilio settings to send WhatsApp messages,Tafadhali washa mipangilio ya Twilio kutuma ujumbe wa WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Hairuhusiwi kuambatisha {0} hati, tafadhali wezesha Ruhusu Kuchapishwa kwa {0} katika Mipangilio ya Chapisho",
 Signup Disabled,Usajili Umezimwa,
 Signups have been disabled for this website.,Usajili umezimwa kwa wavuti hii.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Uthibitishaji wa Saini ya Razorpay Imeshi
 Google Drive - Could not locate - {0},Hifadhi ya Google - Imeshindwa kupata - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Hati ya usawazishaji ilikuwa batili na imebadilishwa, Jaribu kusawazisha tena.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Tafadhali chagua njia nyingine ya kulipa. Paytm haiauni shughuli kwa sarafu &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,SID ya Akaunti batili au Ishara ya Auth.,
-Please enable twilio settings before sending WhatsApp messages,Tafadhali washa mipangilio ya twilio kabla ya kutuma ujumbe wa WhatsApp,
-Delivery Failed,Uwasilishaji Umeshindwa,
-Twilio WhatsApp Message Error,Hitilafu ya Ujumbe wa WhatsApp ya Twilio,
 A featured post must have a cover image,Chapisho lililoangaziwa lazima liwe na picha ya kifuniko,
 Load More,Pakia Zaidi,
 Published on,Imechapishwa mnamo,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Tafadhal
 Shared with the following Users with Read access:{0},Imeshirikiwa na Watumiaji wafuatao na idhini ya kufikia kusoma: {0},
 Already in the following Users ToDo list:{0},Tayari iko katika orodha ifuatayo ya Watumiaji wa Kufanya: {0},
 Your assignment on {0} {1} has been removed by {2},Kazi yako kwenye {0} {1} imeondolewa na {2},
+Consumer,Mtumiaji,
 Invalid Credentials,Hati batili,
 Print UOM after Quantity,Chapisha UOM baada ya Wingi,
 Uncaught Server Exception,Ubaguzi wa Seva isiyofundishwa,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Thamani haiwezi kuwa hasi kwa {0}: {1},
 Negative Value,Thamani hasi,
 Authentication failed while receiving emails from Email Account: {0}.,Uthibitishaji umeshindwa wakati wa kupokea barua pepe kutoka Akaunti ya Barua pepe: {0}.,
 Message from server: {0},Ujumbe kutoka kwa seva: {0},
+Consumers,Watumiaji,
+Event Update Log Consumer,Sasisho la Tukio Mtumiaji wa Ingia,
+Row #{0}: Could not find field {1} in {2} DocType,Safu mlalo # {0}: Imeshindwa kupata uwanja {1} katika {2} Aina ya Hati,
+Invalid Fieldname,Jina la uwanja si sahihi,
