--- a/frappe/translations/tr.csv
+++ b/frappe/translations/tr.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Mesaj (HTML),
 Send Attachments,Ekleri Gönder,
 Testing,Test yapmak,
 System Notification,Sistem Bildirimi,
-WhatsApp,Naber,
 Twilio Number,Twilio Numarası,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","WhatsApp for Business&#39;ı kullanmak için <a href=""#Form/Twilio Settings"">Twilio Settings&#39;i başlatın</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Slack Kanalını kullanmak için bir <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL&#39;si ekleyin</a> .",
 Send System Notification,Sistem Bildirimi Gönder,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Etkinleştirilirse, bildirim, gezinme çubuğunun sağ üst köşesindeki bildirimler açılır menüsünde görünecektir.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,{0} Otomatik E-posta Raporu gönderilemedi,
 Test email sent to {0},{0} adresine test e-postası gönderildi,
 Email queued to {0} recipients,"E-posta, {0} alıcıyla sıraya alındı",
 Newsletter should have at least one recipient,Haber bülteninin en az bir alıcısı olmalıdır,
-Please enable Twilio settings to send WhatsApp messages,WhatsApp mesajları göndermek için lütfen Twilio ayarlarını etkinleştirin,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","{0} belgesinin eklenmesine izin verilmiyor, lütfen Yazdırma Ayarlarında {0} İçin Yazdırmaya İzin Ver&#39;i etkinleştirin",
 Signup Disabled,Kayıt Devre Dışı,
 Signups have been disabled for this website.,Bu web sitesi için kayıtlar devre dışı bırakıldı.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Razorpay İmza Doğrulaması Başarısız
 Google Drive - Could not locate - {0},Google Drive - Bulunamadı - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Senkronizasyon jetonu geçersizdi ve sıfırlandı, Senkronizasyonu yeniden deneyin.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',"Lütfen başka bir ödeme yöntemi seçin. Paytm, &#39;{0}&#39; para birimindeki işlemleri desteklemiyor",
-Invalid Account SID or Auth Token.,Geçersiz Hesap SID&#39;si veya Kimlik Doğrulama Jetonu.,
-Please enable twilio settings before sending WhatsApp messages,Lütfen WhatsApp mesajlarını göndermeden önce twilio ayarlarını etkinleştirin,
-Delivery Failed,Teslimat Başarısız,
-Twilio WhatsApp Message Error,Twilio WhatsApp Mesaj Hatası,
 A featured post must have a cover image,Öne çıkan bir gönderinin kapak resmi olması gerekir,
 Load More,Daha fazla yükle,
 Published on,yayınlandı,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,Lütfen 
 Shared with the following Users with Read access:{0},Aşağıdaki Okuma erişimine sahip Kullanıcılarla paylaşıldı: {0},
 Already in the following Users ToDo list:{0},Zaten şu Yapılacaklar listesinde: {0},
 Your assignment on {0} {1} has been removed by {2},{0} {1} ile ilgili ödeviniz {2} tarafından kaldırıldı,
+Consumer,Tüketici,
 Invalid Credentials,Geçersiz kimlik bilgileri,
 Print UOM after Quantity,Miktardan Sonra UOM Yazdır,
 Uncaught Server Exception,Yakalanmamış Sunucu İstisnası,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},{0} için değer negatif olamaz: {1},
 Negative Value,Olumsuz değer,
 Authentication failed while receiving emails from Email Account: {0}.,E-posta Hesabından e-posta alınırken kimlik doğrulama başarısız oldu: {0}.,
 Message from server: {0},Sunucudan mesaj: {0},
+Consumers,Tüketiciler,
+Event Update Log Consumer,Olay Güncelleme Günlüğü Tüketicisi,
+Row #{0}: Could not find field {1} in {2} DocType,Satır # {0}: {2} DocType içinde {1} alanı bulunamadı,
+Invalid Fieldname,Geçersiz Alan Adı,
