--- a/frappe/translations/uz.csv
+++ b/frappe/translations/uz.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Xabar (HTML),
 Send Attachments,Qo&#39;shimchalar yuboring,
 Testing,Sinov,
 System Notification,Tizim haqida bildirishnoma,
-WhatsApp,WhatsApp,
 Twilio Number,Twilio raqami,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","WhatsApp for Business-dan foydalanish uchun <a href=""#Form/Twilio Settings"">Twilio sozlamalarini</a> ishga <a href=""#Form/Twilio Settings"">tushiring</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Slack Channel-dan foydalanish uchun <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL manzilini</a> qo&#39;shing.",
 Send System Notification,Tizim xabarnomasini yuboring,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Agar yoqilgan bo&#39;lsa, bildirishnoma navigatsiya panelining yuqori o&#39;ng burchagidagi bildirishnomalar ochiladigan oynasida ko&#39;rinadi.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,{0} Avtomatik elektron pochta hisoboti yubo
 Test email sent to {0},Sinov xati {0} ga yuborildi,
 Email queued to {0} recipients,{0} oluvchilarga elektron pochta navbatida,
 Newsletter should have at least one recipient,Axborotnomada kamida bitta oluvchi bo&#39;lishi kerak,
-Please enable Twilio settings to send WhatsApp messages,WhatsApp xabarlarini yuborish uchun Twilio sozlamalarini yoqing,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","{0} hujjatini biriktirishga ruxsat berilmagan, iltimos, bosib chiqarish sozlamalarida &quot;Uchun nashr etishga ruxsat berish&quot; ni {0} yoqing",
 Signup Disabled,Ro&#39;yxatdan o&#39;tish o&#39;chirilgan,
 Signups have been disabled for this website.,Ushbu veb-saytda ro&#39;yxatdan o&#39;tish o&#39;chirib qo&#39;yilgan.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Razorpay imzosini tekshirib bo&#39;lmadi,
 Google Drive - Could not locate - {0},Google Drive - topilmadi - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Sinxronizatsiya belgisi noto&#39;g&#39;ri edi va qayta o&#39;rnatildi, sinxronlashni takrorlang.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Boshqa to&#39;lov usulini tanlang. Paytm &quot;{0}&quot; valyutasidagi operatsiyalarni qo&#39;llab-quvvatlamaydi,
-Invalid Account SID or Auth Token.,Noto&#39;g&#39;ri SID yoki Auth Token.,
-Please enable twilio settings before sending WhatsApp messages,WhatsApp xabarlarini yuborishdan oldin twilio sozlamalarini yoqing,
-Delivery Failed,Yetkazib berilmadi,
-Twilio WhatsApp Message Error,Twilio WhatsApp xabarida xato,
 A featured post must have a cover image,Taniqli postda muqovali rasm bo&#39;lishi kerak,
 Load More,Ko&#39;proq yuklang,
 Published on,Nashr qilingan,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,"Iltimos
 Shared with the following Users with Read access:{0},O&#39;qish huquqiga ega bo&#39;lgan quyidagi foydalanuvchilar bilan bo&#39;lishilgan: {0},
 Already in the following Users ToDo list:{0},Quyidagi foydalanuvchilar toDo ro&#39;yxatida allaqachon mavjud: {0},
 Your assignment on {0} {1} has been removed by {2},{0} {1} dagi topshiriqingiz {2} tomonidan olib tashlandi,
+Consumer,Iste&#39;molchi,
 Invalid Credentials,Noto&#39;g&#39;ri ma&#39;lumotnoma,
 Print UOM after Quantity,Miqdordan keyin UOMni chop eting,
 Uncaught Server Exception,Serverning istisno holati,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},{0} uchun manfiy bo&#39;lmasligi mumkin: {
 Negative Value,Salbiy qiymat,
 Authentication failed while receiving emails from Email Account: {0}.,Elektron pochta hisobidan elektron pochta xabarlarini qabul qilishda autentifikatsiya amalga oshmadi: {0}.,
 Message from server: {0},Serverdan xabar: {0},
+Consumers,Iste&#39;molchilar,
+Event Update Log Consumer,Voqealarni yangilash jurnalining iste&#39;molchisi,
+Row #{0}: Could not find field {1} in {2} DocType,№ {0} qator: {2} DocType-dan {1} maydon topilmadi,
+Invalid Fieldname,Maydon nomi noto‘g‘ri,
