--- a/frappe/translations/vi.csv
+++ b/frappe/translations/vi.csv
@@ -4400,9 +4400,7 @@ Message (HTML),Tin nhắn (HTML),
 Send Attachments,Gửi tệp đính kèm,
 Testing,Thử nghiệm,
 System Notification,Thông báo hệ thống,
-WhatsApp,WhatsApp,
 Twilio Number,Số Twilio,
-"To use WhatsApp for Business, initialize <a href=""#Form/Twilio Settings"">Twilio Settings</a>.","Để sử dụng WhatsApp cho Doanh nghiệp, hãy khởi chạy <a href=""#Form/Twilio Settings"">Cài đặt Twilio</a> .",
 "To use Slack Channel, add a <a href=""#List/Slack%20Webhook%20URL/List"">Slack Webhook URL</a>.","Để sử dụng Slack Channel, hãy thêm <a href=""#List/Slack%20Webhook%20URL/List"">URL của Slack Webhook</a> .",
 Send System Notification,Gửi thông báo hệ thống,
 "If enabled, the notification will show up in the notifications dropdown on the top right corner of the navigation bar.","Nếu được bật, thông báo sẽ hiển thị trong menu thả xuống thông báo ở góc trên cùng bên phải của thanh điều hướng.",
@@ -4557,7 +4555,6 @@ Failed to send {0} Auto Email Report,Không gửi được {0} Báo cáo email t
 Test email sent to {0},Kiểm tra email đã được gửi đến {0},
 Email queued to {0} recipients,Email được xếp hàng đợi đến {0} người nhận,
 Newsletter should have at least one recipient,Bản tin phải có ít nhất một người nhận,
-Please enable Twilio settings to send WhatsApp messages,Vui lòng bật cài đặt Twilio để gửi tin nhắn WhatsApp,
 "Not allowed to attach {0} document, please enable Allow Print For {0} in Print Settings","Không được phép đính kèm tài liệu {0}, vui lòng bật Cho phép In Đối với {0} trong Cài đặt In",
 Signup Disabled,Đăng ký bị vô hiệu hóa,
 Signups have been disabled for this website.,Đăng ký đã bị vô hiệu hóa cho trang web này.,
@@ -4594,10 +4591,6 @@ Razorpay Signature Verification Failed,Xác minh Chữ ký Razorpay Không thàn
 Google Drive - Could not locate - {0},Google Drive - Không thể định vị - {0},
 "Sync token was invalid and has been resetted, Retry syncing.","Mã thông báo đồng bộ hóa không hợp lệ và đã được đặt lại, Hãy thử đồng bộ hóa lại.",
 Please select another payment method. Paytm does not support transactions in currency '{0}',Vui lòng chọn một phương thức thanh toán khác. Paytm không hỗ trợ các giao dịch bằng tiền tệ &#39;{0}&#39;,
-Invalid Account SID or Auth Token.,SID tài khoản hoặc Mã xác thực không hợp lệ.,
-Please enable twilio settings before sending WhatsApp messages,Vui lòng bật cài đặt twilio trước khi gửi tin nhắn WhatsApp,
-Delivery Failed,Giao hàng thất bại,
-Twilio WhatsApp Message Error,Lỗi tin nhắn Twilio WhatsApp,
 A featured post must have a cover image,Một bài đăng nổi bật phải có ảnh bìa,
 Load More,Tải thêm,
 Published on,Được xuất bản trên,
@@ -4616,6 +4609,7 @@ Please set the following documents in this Dashboard as standard first.,"Trướ
 Shared with the following Users with Read access:{0},Được chia sẻ với những Người dùng sau có quyền truy cập Đọc: {0},
 Already in the following Users ToDo list:{0},Đã có trong danh sách Việc cần làm của Người dùng sau: {0},
 Your assignment on {0} {1} has been removed by {2},Bài tập của bạn trên {0} {1} đã bị xóa bởi {2},
+Consumer,Khách hàng,
 Invalid Credentials,Thông tin không hợp lệ,
 Print UOM after Quantity,In UOM sau số lượng,
 Uncaught Server Exception,Ngoại lệ máy chủ chưa được thông báo,
@@ -4700,3 +4694,7 @@ Value cannot be negative for {0}: {1},Giá trị không được âm cho {0}: {1
 Negative Value,Giá trị âm,
 Authentication failed while receiving emails from Email Account: {0}.,Xác thực không thành công khi nhận email từ Tài khoản Email: {0}.,
 Message from server: {0},Thông báo từ máy chủ: {0},
+Consumers,Người tiêu dùng,
+Event Update Log Consumer,Cập nhật sự kiện Nhật ký Người tiêu dùng,
+Row #{0}: Could not find field {1} in {2} DocType,Hàng # {0}: Không thể tìm thấy trường {1} trong {2} DocType,
+Invalid Fieldname,Tên trường không hợp lệ,
